--- a/cn-cu-eng.html
+++ b/cn-cu-eng.html
@@ -6,7 +6,7 @@
 <!-- HEADER BEGINS | DEBUT DE L'EN-TETE -->
 <!-- TITLE BEGINS | DEBUT DU TITRE -->
 
-<title>Contact Us - EGD - PWGSC</title>
+<title>Contact Us &ndash; EGD &ndash; PWGSC</title>
 
 <!-- TITLE ENDS | FIN DU TITRE -->
 <!-- METADATA BEGINS | DEBUT DES METADONNEES -->
@@ -177,10 +177,10 @@
 					Esquimalt Graving Dock<br />
 					825&nbsp;Admirals Road<br />
 					Esquimalt, <acronym title="British Columbia">BC</acronym><br />
-					V9A 2P1<br />
+					V9A&nbsp;2P1<br />
 					Canada</p>
 				<h3>Telephone us:</h3>
-				<p>250-363-3877&nbsp;or 250-363-8056</p>
+				<p>250-363-3877&nbsp;or&nbsp;250-363-8056</p>
 				<h3>Fax us:</h3>
 				<p>250-363-8059</p>
 				<h2><a name="con-pri">Privacy Notice Statement</a></h2>
@@ -188,7 +188,7 @@
 					information for the purpose of responding to your questions/comments, and
 					to improve our Internet presence. The information will be held in Public
 					Works and Government Services Canada's Personal Information Bank number
-					PPU 115&nbsp;Internet and PPE 830&nbsp;Intranet Services, and it will be retained
+					PPU&nbsp;115&nbsp;Internet and PPE&nbsp;830&nbsp;Intranet Services, and it will be retained
 					according to the retention and disposal schedule established for this bank.</p>
 				<p>Your personal information is protected under the provisions of the <a href="http://laws-lois.justice.gc.ca/eng/acts/P-21/index.html"><em>Privacy Act</em></a>. Under the Act, you have the right to request access to and
 							correction of your personal information, if erroneous or incomplete. If
