--- a/cn-cu-fra.html
+++ b/cn-cu-fra.html
@@ -6,7 +6,7 @@
 <!-- DEBUT DE L'EN-TETE | HEADER BEGINS -->
 <!-- DEBUT DU TITRE | TITLE BEGINS -->
 
-<title>Contactez-nous - CSE - TPSGC</title>
+<title>Contactez-nous &ndash; CSE &ndash; TPSGC</title>
 
 <!-- FIN DU TITRE | TITLE ENDS -->
 <!-- DEBUT DES METADONNEES | METADATA BEGINS -->
@@ -166,10 +166,10 @@
 					Cale s&egrave;che d'Esquimalt <br />
 					825&nbsp;Admirals Road<br />
 					Esquimalt (C.-B.)<br />
-					V9A 2P1<br />
+					V9A&nbsp;2P1<br />
 					Canada</p>
 				<h3>T&eacute;l&eacute;phone&nbsp;:</h3>
-				<p> 604-666-5191</p>
+				<p>604-666-5191</p>
 				<h3>Notre fax&nbsp;:</h3>
 				<p>250-363-8059</p>
 				<h2><a name="con-pri">&Eacute;nonc&eacute; de confidentialit&eacute;</a></h2>
@@ -178,7 +178,7 @@
 					vos questions et commentaires et pour am&eacute;liorer notre pr&eacute;sence
 					sur le Web. Ces renseignements seront conserv&eacute;s dans les fichiers
 					de renseignements personnels de Travaux publics et Services gouvernementaux
-					Canada num&eacute;ros PPU 115&nbsp;(Services Internet) et PPE 830&nbsp;(Services intranet),
+					Canada num&eacute;ros PPU&nbsp;115&nbsp;(Services Internet) et PPE&nbsp;830&nbsp;(Services intranet),
 					selon les calendriers de conservation et de disposition &eacute;tablis pour
 					ces fichiers.</p>
 				<p>Vos renseignements personnels sont prot&eacute;g&eacute;s en vertu des
