--- a/conduite-conduct-eng.html
+++ b/conduite-conduct-eng.html
@@ -6,7 +6,7 @@
 <!-- HEADER BEGINS | DEBUT DE L'EN-TETE -->
 <!-- TITLE BEGINS | DEBUT DU TITRE -->
 
-<title>Code of Conduct - EGD - PWGSC</title>
+<title>Code of Conduct &ndash; EGD &ndash; PWGSC</title>
 
 <!-- TITLE ENDS | FIN DU TITRE -->
 <!-- METADATA BEGINS | DEBUT DES METADONNEES -->
@@ -59,7 +59,7 @@
 <link href="/clf20/css/base-institution.css" media="screen, print" rel="stylesheet" type="text/css" />
 <link href="/clf20/css/institution.css" media="screen, print" rel="stylesheet" type="text/css" />
 <link href="/pac/cse-egd/css/custom.css" media="screen" rel="stylesheet" type="text/css" />
-<style>
+<style type="text/css" media="all">
   ol li { list-style: none; margin-top: 10px; }
 </style>
 <!-- CUSTOM SCRIPTS/CSS END | FIN DES SCRIPTS/CSS PERSONNALISES -->
@@ -97,7 +97,7 @@
 					Code of Conduct
 					<!-- CONTENT TITLE ENDS | FIN DU TITRE DU CONTENU -->
 					</h1>
-				<h2><strong>ARTICLE 1&nbsp;</strong></h2>
+				<h2><strong>ARTICLE&nbsp;1</strong></h2>
 				<h3><strong>OBJECT AND GUIDING PRINCIPLES</strong></h3>
 				<p><strong>1.1&nbsp;Object of Code</strong>. <em> Conducting business at the Esquimalt
 						Graving Dock is a privilege, not a right.</em> The object of this Code
@@ -117,7 +117,7 @@
 					workplace ethics. In support of the department&rsquo;s own ethical blueprint,
 					it is expected that: users conduct themselves with integrity and treat others
 					with respect; act in the best interest of the public; and respect the commitments
-					of this federal government facility. </p>
+					of this federal government facility.</p>
 				<p><strong>1.2&nbsp;Guiding Principles</strong>. All businesses operating at the
 					Esquimalt Graving Dock are to abide by the following principles:</p>
         <ol>
@@ -126,7 +126,7 @@
             Engaging in behavior contrary to its use as a unique public facility does
             not allow for a healthy and competitive marketplace on the West Coast;</li>
           <li>(b) The Government of Canada commits to its environmental responsibilities
-            under <acronym title="International Standards Organization">ISO</acronym> 14001&nbsp;certification;</li>
+            under <acronym title="International Standards Organization">ISO</acronym>&nbsp;14001 certification;</li>
           <li>(c) As a designated port, the Government of Canada will adhere to the
             commitments required for international security as determined by the International
             Ship and Port Security (ISPS) legislation. </li>
@@ -155,7 +155,7 @@
         </ol>
 				<p><strong>1.6&nbsp;Timing of Acknowledgement</strong>. The senior authorized
 					officer of each respective business will deliver the acknowledgement described
-					in Article 1.5&nbsp;of this Code to the Manager, Esquimalt Graving Dock within
+					in Article&nbsp;1.5 of this Code to the Manager, Esquimalt Graving Dock within
 					two weeks of official receipt.</p>
 				<p><strong>1.7&nbsp;Distribution</strong>. This Code will be distributed to all
 					businesses operating at the Esquimalt Graving Dock and will be published
@@ -164,7 +164,7 @@
 					as required.</p>
 				<div class="topPage"> <a href="#tphp" title="Return to Top of Page"><img src="/clf20/images/tphp.gif" width="19" height="12" alt="" /><br />
 					Top of Page</a> </div>
-				<h2><strong>ARTICLE 2&nbsp;</strong></h2>
+				<h2><strong>ARTICLE&nbsp;2</strong></h2>
 				<h3> <strong>ETHICAL VALUES</strong></h3>
 				<p><strong>2.1&nbsp;Ethical values to demonstrate</strong>. As an open, multi-user
 					public facility, owned by the Government of Canada, businesses will demonstrate:</p>
@@ -181,8 +181,8 @@
         </ol>
 				<div class="topPage"> <a href="#tphp" title="Return to Top of Page"><img src="/clf20/images/tphp.gif" width="19" height="12" alt="" /><br />
 					Top of Page</a> </div>
-				<h2><strong>ARTICLE 3&nbsp;</strong></h2>
-				<h3><strong>BUSINESS REQUIREMENTS </strong></h3>
+				<h2><strong>ARTICLE&nbsp;3</strong></h2>
+				<h3><strong>BUSINESS REQUIREMENTS</strong></h3>
 				<p><strong>3.1&nbsp;The Esquimalt Graving Dock</strong>. The Esquimalt Graving
 					Dock is a dynamic world-class facility that, in partnership with the private
 					sector, provides high quality, on-time service to national and international
@@ -207,7 +207,7 @@
         </ol>
 				<div class="topPage"> <a href="#tphp" title="Return to Top of Page"><img src="/clf20/images/tphp.gif" width="19" height="12" alt="" /><br />
 					Top of Page</a> </div>
-				<h2><strong>ARTICLE 4&nbsp;</strong></h2>
+				<h2><strong>ARTICLE&nbsp;4</strong></h2>
 				<h3><strong>STANDARDS OF BEHAVIOUR</strong></h3>
 				<p><strong>4.1&nbsp;Obligations of businesses.</strong> All businesses operating
 					at the facility must:</p>
@@ -253,20 +253,20 @@
         </ol>
 				<div class="topPage"> <a href="#tphp" title="Return to Top of Page"><img src="/clf20/images/tphp.gif" width="19" height="12" alt="" /><br />
 					Top of Page</a> </div>
-				<h2><strong>ARTICLE 5&nbsp;</strong></h2>
+				<h2><strong>ARTICLE&nbsp;5</strong></h2>
 				<h3><strong>COMPLIANCE </strong></h3>
 				<p><strong>5.1&nbsp;Determination of compliance</strong>. <acronym title="Esquimalt Graving Dock">EGD</acronym> Management will
 					monitor compliance to this Code. Where there is a written disclosure made
 					to the Manager, Esquimalt Graving Dock or the Regional Director General
 					which indicates a failure to comply with this Code, it will be determined:</p>
         <ol>
-          <li>(a) whether the disclosure indicates non-compliance to Article 4&nbsp;of this
+          <li>(a) whether the disclosure indicates non-compliance to Article&nbsp;4 of this
             Code; and</li>
           <li>(b) whether, if applicable, a business has failed to comply with this
             Code. </li>
         </ol>
 				<p><strong>5.2&nbsp;Notice of Non-Compliance</strong>. Upon making an initial
-					determination under Article 5.1, Esquimalt Graving Dock Management will
+					determination under Article&nbsp;5.1, Esquimalt Graving Dock Management will
 					advise the affected business in writing.</p>
 				<p><strong>5.3&nbsp;Response of Notice of Non-Compliance</strong>. The senior
 					authorized officer will resolve non-compliance issues in relation to this
@@ -307,7 +307,7 @@
 					to:</p>
 				<ul>
 					<li>Esquimalt Graving Dock<br />
-					Telephone: 250-363-3879&nbsp;or 250-363-8056<br />
+					Telephone: 250-363-3879&nbsp;or&nbsp;250-363-8056<br />
 					Email: <em><a href="mailto:egd-cse@pwgsc-tpsgc.gc.ca">egd-cse@pwgsc-tpsgc.gc.ca</a></em></li>
 					</ul>
         <p><strong>5.7&nbsp;Failure to comply</strong>. Failure to comply with this Code
