--- a/conduite-conduct-fra.html
+++ b/conduite-conduct-fra.html
@@ -6,7 +6,7 @@
 <!-- DEBUT DE L'EN-TETE | HEADER BEGINS -->
 <!-- DEBUT DU TITRE | TITLE BEGINS -->
 
-<title>Code de conduite - CSE - TPSGC</title>
+<title>Code de conduite &ndash; CSE &ndash; TPSGC</title>
 
 <!-- FIN DU TITRE | TITLE ENDS -->
 <!-- DEBUT DES METADONNEES | METADATA BEGINS -->
@@ -42,7 +42,7 @@
 <style type="text/css" media="all">
 @import url(/clf20/css/base2.css);
 </style>
-<style>
+<style type="text/css" media="all">
   ol li { list-style: none; margin-top: 10px; }
 </style>
 <!-- PROGRESSIVE ENHANCEMENT BEGINS | DEBUT DE L'AMELIORATION PROGRESSIVE -->
@@ -92,9 +92,9 @@
 					Code de conduite
 					<!-- CONTENT TITLE ENDS | FIN DU TITRE DU CONTENU -->
 					</h1>
-				<h2>ARTICLE 1</h2>
+				<h2>ARTICLE&nbsp;1</h2>
 				<h3><strong>OBJET ET PRINCIPES DIRECTEURS</strong></h3>
-				<p><strong> 1.1&nbsp;Objet du Code.</strong><em> L&rsquo;autorisation de faire
+				<p><strong>1.1&nbsp;Objet du Code.</strong><em> L&rsquo;autorisation de faire
 						des affaires &agrave; la cale s&egrave;che d&rsquo;Esquimalt est un privil&egrave;ge
 						et non un droit.</em> Le pr&eacute;sent Code vise &agrave; &eacute;tablir
 						et &agrave; pr&eacute;senter clairement les valeurs collectives, responsabilit&eacute;s,
@@ -120,7 +120,7 @@
 					autres avec respect, qu&rsquo;ils agissent dans l&rsquo;int&eacute;r&ecirc;t
 					du public et qu&rsquo;ils respectent les engagements de l&rsquo;&eacute;tablissement,
 					lequel rel&egrave;ve du gouvernement f&eacute;d&eacute;ral. </p>
-				<p><strong> 1.2&nbsp;Principes directeurs.</strong> Toutes les entreprises qui
+				<p><strong>1.2&nbsp;Principes directeurs.</strong> Toutes les entreprises qui
 					m&egrave;nent des activit&eacute;s &agrave; la cale s&egrave;che d&rsquo;Esquimalt
 					doivent respecter les principes suivants&nbsp;: </p>
         <ol>
@@ -149,7 +149,7 @@
 				<p><strong>1.3&nbsp;Application du Code.</strong> Le Code s&rsquo;applique &agrave; tous
 					les utilisateurs qui m&egrave;nent des activit&eacute;s &agrave; la cale
 					s&egrave;che d&rsquo;Esquimalt.</p>
-				<p><strong> 1.4&nbsp;Port&eacute;e des obligations.</strong> Le respect d&rsquo;exigences
+				<p><strong>1.4&nbsp;Port&eacute;e des obligations.</strong> Le respect d&rsquo;exigences
 					pr&eacute;cises du Code ne d&eacute;charge pas un directeur ou agent de
 					la responsabilit&eacute; de prendre les mesures suppl&eacute;mentaires n&eacute;cessaires
 					pour assurer la conformit&eacute; &agrave; toute norme de conduite ou l&rsquo;observation
@@ -157,7 +157,7 @@
 					sur la cale s&egrave;che d&rsquo;Esquimalt</em> et aux pratiques exemplaires
 					de la cale s&egrave;che d&rsquo;Esquimalt, ou &agrave; toute loi internationale,
 					nationale, provinciale ou locale applicable.</p>
-				<p><strong> 1.5&nbsp;Reconnaissance par les entreprises. </strong> Un agent principal
+				<p><strong>1.5&nbsp;Reconnaissance par les entreprises. </strong> Un agent principal
 					autoris&eacute; de chaque entreprise doit reconna&icirc;tre par &eacute;crit
 					aupr&egrave;s du gestionnaire de la cale s&egrave;che d&rsquo;Esquimalt&nbsp;:</p>
         <ol>
@@ -171,16 +171,16 @@
 					d&eacute;crite &agrave; l&rsquo;article&nbsp;1.5&nbsp;du pr&eacute;sent Code
 					au gestionnaire de la cale s&egrave;che d&rsquo;Esquimalt dans les deux&nbsp;semaines
 					suivant la r&eacute;ception officielle.</p>
-				<p><strong> 1.7&nbsp;Distribution.</strong> Le Code est distribu&eacute; &agrave; toutes
+				<p><strong>1.7&nbsp;Distribution.</strong> Le Code est distribu&eacute; &agrave; toutes
 					les entreprises qui m&egrave;nent des activit&eacute;s &agrave; la cale
 					s&egrave;che d&rsquo;Esquimalt et est publi&eacute; sur le site Web <em>www.pwgsc.gc.ca/pacific/egd</em>.</p>
-				<p><strong> 1.8&nbsp;R&eacute;vision du Code.</strong> Le Code est revu et modifi&eacute; au
+				<p><strong>1.8&nbsp;R&eacute;vision du Code.</strong> Le Code est revu et modifi&eacute; au
 					besoin.</p>
 				<div class="topPage"> <a href="#tphp" title="Retourner au haut de la page"><img src="/clf20/images/tphp.gif" width="19" height="12" alt="" /><br />
 						Haut de la page</a> </div>
-				<h2><strong> ARTICLE 2&nbsp;</strong></h2>
-				<h3> <strong>VALEURS &Eacute;THIQUES</strong></h3>
-				<p><strong> 2.1&nbsp;Valeurs &eacute;thiques &agrave; afficher.</strong> Puisqu&rsquo;il
+				<h2><strong> ARTICLE&nbsp;2</strong></h2>
+				<h3><strong>VALEURS &Eacute;THIQUES</strong></h3>
+				<p><strong>2.1&nbsp;Valeurs &eacute;thiques &agrave; afficher.</strong> Puisqu&rsquo;il
 					s&rsquo;agit d&rsquo;un &eacute;tablissement de l&rsquo;&Eacute;tat f&eacute;d&eacute;ral
 					accessible &agrave; tous et &agrave; multiples utilisateurs, les entreprises
 					doivent mettre en &eacute;vidence&nbsp;:</p>
@@ -200,13 +200,13 @@
         </ol>
 				<div class="topPage"> <a href="#tphp" title="Retourner au haut de la page"><img src="/clf20/images/tphp.gif" width="19" height="12" alt="" /><br />
 					Haut de la page</a> </div>
-				<h2><strong>ARTICLE 3&nbsp;</strong></h2>
+				<h2><strong>ARTICLE&nbsp;3</strong></h2>
 				<h3><strong>BESOINS OP&Eacute;RATIONNELS </strong></h3>
-				<p><strong> 3.1&nbsp;Cale s&egrave;che d'Esquimalt.</strong> La cale s&egrave;che
+				<p><strong>3.1&nbsp;Cale s&egrave;che d'Esquimalt.</strong> La cale s&egrave;che
 					d&rsquo;Esquimalt est un &eacute;tablissement dynamique de niveau mondial
 					qui, en association avec le secteur priv&eacute;, offre un service rapide
 					et de haute qualit&eacute; &agrave; des clients nationaux et internationaux.</p>
-				<p><strong> 3.2&nbsp;R&eacute;putation de l&rsquo;&eacute;tablissement.</strong>
+				<p><strong>3.2&nbsp;R&eacute;putation de l&rsquo;&eacute;tablissement.</strong>
 					La r&eacute;putation de la cale s&egrave;che d&rsquo;Esquimalt repose sur
 					la gestion prudente des actifs, la prestation de services
 					de qualit&eacute; qui
@@ -215,7 +215,7 @@
 					s&rsquo;agit d&rsquo;un &eacute;tablissement appartenant &agrave; l&rsquo;&Eacute;tat,
 					la r&eacute;putation de la cale s&egrave;che d&rsquo;Esquimalt a des r&eacute;percussions
 					sur celle du gouvernement du Canada.</p>
-				<p><strong> 3.3&nbsp;Besoins li&eacute;s &agrave; la relation d&rsquo;affaires.</strong>
+				<p><strong>3.3&nbsp;Besoins li&eacute;s &agrave; la relation d&rsquo;affaires.</strong>
 					La direction de la cale s&egrave;che d&rsquo;Esquimalt tient responsables
 					toutes les entreprises de leurs actions et tient &agrave; ce que tous les
 					intervenants fassent preuve d&rsquo;un excellent sens du respect et des
@@ -236,9 +236,9 @@
         </ol>
 				<div class="topPage"> <a href="#tphp" title="Retourner au haut de la page"><img src="/clf20/images/tphp.gif" width="19" height="12" alt="" /><br />
 					Haut de la page</a> </div>
-				<h2><strong> ARTICLE 4&nbsp;</strong></h2>
+				<h2><strong>ARTICLE&nbsp;4</strong></h2>
 				<h3><strong>NORMES COMPORTEMENTALES</strong></h3>
-				<p><strong> 4.1&nbsp;Obligations des entreprises.</strong> Toutes les entreprises
+				<p><strong>4.1&nbsp;Obligations des entreprises.</strong> Toutes les entreprises
 					qui m&egrave;nent des activit&eacute;s &agrave; l&rsquo;&eacute;tablissement
 					doivent&nbsp;:</p>
         <ol>
@@ -300,9 +300,9 @@
         </ol>
 				<div class="topPage"> <a href="#tphp" title="Retourner au haut de la page"><img src="/clf20/images/tphp.gif" width="19" height="12" alt="" /><br />
 					Haut de la page</a> </div>
-				<h2><strong> ARTICLE 5&nbsp;</strong></h2>
+				<h2><strong>ARTICLE&nbsp;5</strong></h2>
 				<h3><strong>CONFORMIT&Eacute; </strong></h3>
-				<p><strong> 5.1&nbsp;D&eacute;termination de la conformit&eacute;.</strong> La
+				<p><strong>5.1&nbsp;D&eacute;termination de la conformit&eacute;.</strong> La
 					direction de la cale s&egrave;che d&rsquo;Esquimalt assure un suivi de l&rsquo;observation
 					du pr&eacute;sent Code. Lorsqu&rsquo;une communication &eacute;crite adress&eacute;e
 					au gestionnaire de la cale s&egrave;che d&rsquo;Esquimalt ou au directeur
@@ -314,11 +314,11 @@
           <li> (b) le cas &eacute;ch&eacute;ant, si une entreprise n&rsquo;a pas respect&eacute; le
             Code. </li>
         </ol>
-				<p><strong> 5.2&nbsp;Avis de non-conformit&eacute;.</strong> Apr&egrave;s avoir
+				<p><strong>5.2&nbsp;Avis de non-conformit&eacute;.</strong> Apr&egrave;s avoir
 					effectu&eacute; une d&eacute;termination initiale en vertu de l&rsquo;article&nbsp;5.1,
 					la direction de la cale s&egrave;che d&rsquo;Esquimalt avise l&rsquo;entreprise
 					concern&eacute;e par &eacute;crit.</p>
-				<p><strong> 5.3&nbsp;R&eacute;ponse &agrave; l&rsquo;avis de non-conformit&eacute;.</strong>
+				<p><strong>5.3&nbsp;R&eacute;ponse &agrave; l&rsquo;avis de non-conformit&eacute;.</strong>
 					L&rsquo;agent principal autoris&eacute; r&egrave;gle les questions de non&#8209;conformit&eacute; se
 					rapportant au pr&eacute;sent Code de conduite en fournissant une r&eacute;ponse &eacute;crite
 					au gestionnaire de la cale s&egrave;che d&rsquo;Esquimalt dans les sept&nbsp;(7)&nbsp;jours
@@ -333,14 +333,14 @@
 					l&rsquo;acceptabilit&eacute; des mesures correctives et pr&eacute;ventives
 					dans un d&eacute;lai de sept&nbsp;(7)&nbsp;jours civils, apr&egrave;s avoir
 					examin&eacute; plus attentivement toute l&rsquo;information pertinente. </p>
-				<p><strong> 5.4&nbsp;Occasion de pr&eacute;senter son point de vue. </strong> La
+				<p><strong>5.4&nbsp;Occasion de pr&eacute;senter son point de vue. </strong> La
 					direction de la cale s&egrave;che d&rsquo;Esquimalt ou le directeur g&eacute;n&eacute;ral
 					r&eacute;gional donne &agrave; l&rsquo;agent principal autoris&eacute; l&rsquo;occasion
 					de pr&eacute;senter son point de vue imm&eacute;diatement apr&egrave;s la
 					r&eacute;ception de l&rsquo;all&eacute;gation de non&#8209;conformit&eacute; ou
 					dans le cadre de la d&eacute;termination initiale de non&#8209;conformit&eacute; faite
 					en vertu du pr&eacute;sent article du Code.</p>
-				<p><strong> 5.5&nbsp;Non-conformit&eacute; &agrave; la l&eacute;gislation.</strong>
+				<p><strong>5.5&nbsp;Non-conformit&eacute; &agrave; la l&eacute;gislation.</strong>
 					La direction de la cale s&egrave;che d&rsquo;Esquimalt doit signaler, &agrave; l&rsquo;autorit&eacute; f&eacute;d&eacute;rale,
 					provinciale ou municipale appropri&eacute;e, les infractions &agrave; toute
 					loi applicable, entre autres les suivantes&nbsp;:</p>
@@ -357,17 +357,17 @@
 					<li><em> Loi sur la gestion des finances publiques </em></li>
 					<li><em> Code criminel </em></li>
 				</ul>
-				<p><strong> 5.6&nbsp;D&eacute;claration et divulgation.</strong> Les utilisateurs
+				<p><strong>5.6&nbsp;D&eacute;claration et divulgation.</strong> Les utilisateurs
 					peuvent obtenir des clarifications relatives aux &eacute;l&eacute;ments
 					du pr&eacute;sent Code de conduite ou signaler directement tout cas pr&eacute;sum&eacute; de
 					non&#8209;conformit&eacute; aupr&egrave;s du&nbsp;:</p>
 				<ul>
 					<li> Gestionnaire de la cale s&egrave;che d&rsquo;Esquimalt<br />
 						T&eacute;l&eacute;phone&nbsp;:
-						250-363-3879&nbsp;ou 250-363-8056&nbsp;<br />
+						250-363-3879&nbsp;ou&nbsp;250-363-8056<br />
 						Courriel&nbsp;: <em><a href="mailto:cse-egd@tpsgc-pwgsc.gc.ca">cse-egd@tpsgc-pwgsc.gc.ca</a></em></li>
 				</ul>
-				<p><strong> 5.7&nbsp;Non-conformit&eacute;.</strong> En cas d&rsquo;inobservation
+				<p><strong>5.7&nbsp;Non-conformit&eacute;.</strong> En cas d&rsquo;inobservation
 					du pr&eacute;sent Code, la direction de la cale s&egrave;che d&rsquo;Esquimalt
 					peut prendre une des mesures suivantes&nbsp;:</p>
 				<ul>
