--- a/dimensions-eng.html
+++ b/dimensions-eng.html
@@ -6,7 +6,7 @@
 <!-- HEADER BEGINS | DEBUT DE L'EN-TETE -->
 <!-- TITLE BEGINS | DEBUT DU TITRE -->
 
-<title>About the Dock - EGD - PWGSC</title>
+<title>About the Dock &ndash; EGD &ndash; PWGSC</title>
 
 <!-- TITLE ENDS | FIN DU TITRE -->
 <!-- METADATA BEGINS | DEBUT DES METADONNEES -->
@@ -92,8 +92,7 @@
 					About the Dock
 					<!-- CONTENT TITLE ENDS | FIN DU TITRE DU CONTENU -->
 					</h1>
-				<p>The Esquimalt Graving Dock's dimensions measure 357.5&nbsp;metres by 38.4&nbsp;metres
-					- or about 1,200&nbsp;feet long by 135&nbsp;feet wide. The north landing jetty is
+				<p>The Esquimalt Graving Dock's dimensions measure 357.5&nbsp;metres by 38.4&nbsp;metres &ndash; or about 1,200&nbsp;feet long by 135&nbsp;feet wide. The north landing jetty is
 					305&nbsp;metres long (1000&nbsp;feet) and contains 10&nbsp;metres of water (30&nbsp;feet) at
 					low tide. There is another 305&nbsp;metres (1000&nbsp;feet) of berth frontage at the
 					south landing wharf.</p>
@@ -137,65 +136,65 @@
 						<td colspan="2" headers="area metres">Clear inside length, cassion in place:</td>
 					</tr>
 					<tr>
-						<td headers="area">in stop&nbsp;%1</td>
-						<td headers="metres"> 357.5&nbsp;</td>
+						<td headers="area">in stop&nbsp;1</td>
+						<td headers="metres">357.5&nbsp;</td>
 					</tr>
 					<tr>
-						<td headers="area"> in stop&nbsp;%2&nbsp;</td>
-						<td headers="metres"> 347.67</td>
+						<td headers="area"> in stop&nbsp;2&nbsp;</td>
+						<td headers="metres">347.67</td>
 					</tr>
 					<tr>
-						<td headers="area"> in stop&nbsp;%3&nbsp;</td>
-						<td headers="metres"> 225.65&nbsp;</td>
+						<td headers="area"> in stop&nbsp;3&nbsp;</td>
+						<td headers="metres">225.65&nbsp;</td>
 					</tr>
 					<tr>
-						<td headers="area"> in stop&nbsp;%4&nbsp;</td>
-						<td headers="metres"> 119.07&nbsp;</td>
+						<td headers="area"> in stop&nbsp;4&nbsp;</td>
+						<td headers="metres">119.07&nbsp;</td>
 					</tr>
 					<tr>
-						<td headers="area"> in stops&nbsp;%2&nbsp;and&nbsp;%3&nbsp;</td>
-						<td headers="metres"> 114.96&nbsp;</td>
+						<td headers="area"> in stops&nbsp;2&nbsp;and&nbsp;3&nbsp;</td>
+						<td headers="metres">114.96&nbsp;</td>
 					</tr>
 					<tr>
-						<td headers="area"> in stops&nbsp;%2&nbsp;and&nbsp;%4&nbsp;</td>
-						<td headers="metres"> 221.64&nbsp;</td>
+						<td headers="area"> in stops&nbsp;2&nbsp;and&nbsp;4&nbsp;</td>
+						<td headers="metres">221.64&nbsp;</td>
 					</tr>
 					<tr>
 						<td headers="area"> Width of dock at entrance </td>
-						<td headers="metres"> 41.15&nbsp;</td>
+						<td headers="metres">41.15&nbsp;</td>
 					</tr>
 					<tr>
 						<td headers="area"> Depth of water over dock sill (High Water
 							Ordinary Spring Tide) </td>
-						<td headers="metres"> 12.19&nbsp;</td>
+						<td headers="metres">12.19&nbsp;</td>
 					</tr>
 					<tr>
 						<td headers="area"> Depth of water over dock sill (Low Water
 							Ordinary Spring Tide) </td>
-						<td headers="metres"> 9.14&nbsp;</td>
+						<td headers="metres">9.14&nbsp;</td>
 					</tr>
 					<tr>
 						<td headers="area"> Depth of water over keel blocks (High Water
 							Ordinary Spring Tide) </td>
-						<td headers="metres"> 12.22&nbsp;</td>
+						<td headers="metres">12.22&nbsp;</td>
 					</tr>
 					<tr>
 						<td headers="area"> Depth of water over keel blocks (Low Water
 							Ordinary Spring Tide) </td>
-						<td headers="metres"> 9.17&nbsp;</td>
+						<td headers="metres">9.17&nbsp;</td>
 					</tr>
 					<tr>
 						<td headers="area"> Height of keel blocks above deck floor </td>
-						<td headers="metres"> 1.55&nbsp;</td>
+						<td headers="metres">1.55&nbsp;</td>
 					</tr>
 					<tr>
 						<td headers="area"> Height of floor to coping </td>
-						<td headers="metres"> 14.93&nbsp;</td>
+						<td headers="metres">14.93&nbsp;</td>
 					</tr>
 				</table>
 				</div>
-				<p><i>Source: &nbsp;Harbour &amp; Shipping Journal, July 2002, Volume 85,
-						No. 7</i> </p>
+				<p><i>Source: &nbsp;Harbour &amp; Shipping Journal, July&nbsp;2002, Volume&nbsp;85,
+						No.&nbsp;7</i> </p>
 			</div>
 
 			<!-- CONTENT ENDS | FIN DU CONTENU -->
