--- a/dimensions-fra.html
+++ b/dimensions-fra.html
@@ -6,7 +6,7 @@
 <!-- DEBUT DE L'EN-TETE | HEADER BEGINS -->
 <!-- DEBUT DU TITRE | TITLE BEGINS -->
 
-<title>Renseignments g&eacute;n&eacute;raux - CSE - TPSGC</title>
+<title>Renseignments g&eacute;n&eacute;raux &ndash; CSE &ndash; TPSGC</title>
 
 <!-- FIN DU TITRE | TITLE ENDS -->
 <!-- DEBUT DES METADONNEES | METADATA BEGINS -->
@@ -89,7 +89,7 @@
 					<!-- CONTENT TITLE ENDS | FIN DU TITRE DU CONTENU -->
 					</h1>
 				<p>Le bassin de mise en cale s&egrave;che d'Esquimalt mesure 357,5&nbsp;m&egrave;tres
-					sur 38,4&nbsp;m&egrave;tres - soit environ 1&nbsp;200&nbsp;pieds de longueur sur 135&nbsp;de
+					sur 38,4&nbsp;m&egrave;tres &ndash; soit environ 1&nbsp;200&nbsp;pieds de longueur sur 135&nbsp;de
 					largeur. La jet&eacute;e d'embarquement nord mesure 305&nbsp;m&egrave;tres de
 					longueur (1&nbsp;000&nbsp;pieds), avec une profondeur d'eau de 10&nbsp;m&egrave;tres (30
 					pieds) &agrave; mar&eacute;e basse. Les installations comptent &eacute;galement
@@ -138,27 +138,27 @@
 									:</td>
 						</tr>
 						<tr>
-							<td headers="SUPERFICIE">&agrave; la but&eacute;e 1&nbsp;</td>
+							<td headers="SUPERFICIE">&agrave; la but&eacute;e&nbsp;1</td>
 							<td headers="METRES">357,5</td>
 						</tr>
 						<tr>
-							<td headers="SUPERFICIE">&agrave; la but&eacute;e 2</td>
+							<td headers="SUPERFICIE">&agrave; la but&eacute;e&nbsp;2</td>
 							<td headers="METRES">347,67</td>
 						</tr>
 						<tr>
-							<td headers="SUPERFICIE">&agrave; la but&eacute;e 3</td>
+							<td headers="SUPERFICIE">&agrave; la but&eacute;e&nbsp;3</td>
 							<td headers="METRES">225,65</td>
 						</tr>
 						<tr>
-							<td headers="SUPERFICIE">&agrave; la but&eacute;e 4</td>
+							<td headers="SUPERFICIE">&agrave; la but&eacute;e&nbsp;4</td>
 							<td headers="METRES">119,07</td>
 						</tr>
 						<tr>
-							<td headers="SUPERFICIE">aux but&eacute;es 2&nbsp;et 3</td>
+							<td headers="SUPERFICIE">aux but&eacute;es 2&nbsp;et&nbsp;3</td>
 							<td headers="METRES">114,96</td>
 						</tr>
 						<tr>
-							<td headers="SUPERFICIE">aux but&eacute;es 2&nbsp;et 4</td>
+							<td headers="SUPERFICIE">aux but&eacute;es 2&nbsp;et&nbsp;4</td>
 							<td headers="METRES">221,64</td>
 						</tr>
 						<tr>
@@ -197,8 +197,8 @@
 						</tr>
 					</table>
 
-					<p><i>Source&nbsp;: &nbsp;Harbour &amp; Shipping Journal, Juillet 2002, Volume 85,
-							n<sup>o</sup> 7</i> </p>
+					<p><i>Source&nbsp;: &nbsp;Harbour &amp; Shipping Journal, Juillet&nbsp;2002, Volume&nbsp;85,
+							n<sup>o</sup>&nbsp;7</i> </p>
 				</div>
 			</div>
 
