--- a/dimensions2-eng.html
+++ b/dimensions2-eng.html
@@ -6,7 +6,7 @@
 <!-- HEADER BEGINS | DEBUT DE L'EN-TETE -->
 <!-- TITLE BEGINS | DEBUT DU TITRE -->
 
-<title>Dock Dimensions - EGD - PWGSC</title>
+<title>Dock Dimensions &ndash; EGD &ndash; PWGSC</title>
 
 <!-- TITLE ENDS | FIN DU TITRE -->
 <!-- METADATA BEGINS | DEBUT DES METADONNEES -->
@@ -85,7 +85,7 @@
 		<!-- CONTENT TITLE ENDS | FIN DU TITRE DU CONTENU -->
 			</a></h1>
 		
-		<img src="images/dimensions.gif" title="Plan View and Logitudinal Section of Esquimalt Graving Dock with various dimensions" alt="" width="740"  style="width: 740px; " />
+		<img src="images/dimensions.gif" alt="Plan View and Logitudinal Section of Esquimalt Graving Dock with various dimensions" width="740"  style="width: 740px; " />
 			</div>
 		</div>
 
