--- a/dimensions2-fra.html
+++ b/dimensions2-fra.html
@@ -6,7 +6,7 @@
 <!-- DEBUT DE L'EN-TETE | HEADER BEGINS -->
 <!-- DEBUT DU TITRE | TITLE BEGINS -->
 
-<title>Dimensions du bassin - CSE - TPSGC</title>
+<title>Dimensions du bassin &ndash; CSE &ndash; TPSGC</title>
 
 <!-- FIN DU TITRE | TITLE ENDS -->
 <!-- DEBUT DES METADONNEES | METADATA BEGINS -->
@@ -85,7 +85,7 @@
 		<!-- CONTENT TITLE ENDS | FIN DU TITRE DU CONTENU -->
 			</a></h1>
 			
-		<img src="images/dimensions.gif" title="Vue en plan, coupe longitudinale et dimensions de la cale sèche d'Esquimalt." alt="" width="740" style="width: 740px; " />
+		<img src="images/dimensions.gif" alt="Vue en plan, coupe longitudinale et dimensions de la cale sèche d'Esquimalt." width="740" style="width: 740px; " />
 
 				</div>
 			</div>
