--- a/emp-loc-eng.html
+++ b/emp-loc-eng.html
@@ -6,7 +6,7 @@
 <!-- HEADER BEGINS | DEBUT DE L'EN-TETE -->
 <!-- TITLE BEGINS | DEBUT DU TITRE -->
 
-<title>Location - EGD - PWGSC</title>
+<title>Location &ndash; EGD &ndash; PWGSC</title>
 
 <!-- TITLE ENDS | FIN DU TITRE -->
 <!-- METADATA BEGINS | DEBUT DES METADONNEES -->
@@ -93,10 +93,10 @@
 					<!-- CONTENT TITLE ENDS | FIN DU TITRE DU CONTENU -->
 					</h1>
 				<p>The Esquimalt Graving Dock is located in Esquimalt at 825&nbsp;Admirals Road
-					&ndash; 15&nbsp;minutes north of Victoria on the southern
+					 &ndash;  15&nbsp;minutes north of Victoria on the southern
 					tip of Vancouver Island.</p>
 				<p>Victoria is close to the port cities of
-					Vancouver, British Columbia and Seattle, Washington. It's also about 1,200
+					Vancouver, British Columbia and Seattle, Washington. It's also about&nbsp;1,200
 					km, or 600&nbsp;miles, north of San Francisco, California.</p>
 				<p>The ice free harbour is strategically located near gateways to Alaska
 					and the Pacific Rim.</p>
