--- a/entreprises-firms-fra.html
+++ b/entreprises-firms-fra.html
@@ -9,7 +9,7 @@
 <!-- DEBUT DE L'EN-TETE | HEADER BEGINS -->
 <!-- DEBUT DU TITRE | TITLE BEGINS -->
 
-<title>Entreprises de radoub - CSE - TPSGC</title>
+<title>Entreprises de radoub &ndash; CSE &ndash; TPSGC</title>
 
 <!-- FIN DU TITRE | TITLE ENDS -->
 <!-- DEBUT DES METADONNEES | METADATA BEGINS -->
@@ -177,7 +177,7 @@
 				<h2>Jenkins Marine Ldd.</h2>
 
         <span class="label">T&eacute;l.&nbsp;:</span>
-        <span class="value">250-383-6440&nbsp;</span>
+        <span class="value">250-383-6440</span>
         <br style="clear: both" />
 
         <span class="label">Fax&nbsp;:</span>
@@ -261,7 +261,7 @@
         <br style="clear: both" />
 
         <span class="label">Nombre d'employ&eacute;s&nbsp;:</span>
-        <span class="value">5&nbsp;- 20</span>
+        <span class="value">5&nbsp;-&nbsp;20</span>
         <br style="clear: both" />
 
         <span class="label">Sp&eacute;cialisations&nbsp;:</span>
@@ -288,7 +288,7 @@
         <br style="clear: both" />
 
         <span class="label">Fax&nbsp;:</span>
-        <span class="value">250-995-6599&nbsp;</span>
+        <span class="value">250-995-6599</span>
         <br style="clear: both" />
 
         <span class="label">Services offerts&nbsp;:</span>
