--- a/env/barrage-boom-eng.html
+++ b/env/barrage-boom-eng.html
@@ -6,7 +6,7 @@
 <!-- HEADER BEGINS | DEBUT DE L'EN-TETE -->
 <!-- TITLE BEGINS | DEBUT DU TITRE -->
 
-<title>Lowering the Boom on Oil Spills - EGD - PWGSC</title>
+<title>Lowering the Boom on Oil Spills &ndash; EGD &ndash; PWGSC</title>
 <!-- TITLE ENDS | FIN DU TITRE -->
 <!-- METADATA BEGINS | DEBUT DES METADONNEES -->
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
@@ -98,7 +98,7 @@
 					<img src="../images/lowering-the-boom-1.jpg" alt="Marine spill cleanup" width="300" height="199" /><br />
 					<acronym title="Public Works and Government Services Canada">PWGSC</acronym> employees and contractors learn the serious business of marine spill cleanup at the esquimalt Graving Dock. The orange inflatable boom is used to control oil spills. </div>
 				<p>In early spring, the Esquimalt Graving Dock, Canada's biggest dry dock,
-					was teh site of oil spill training for PWGSC employees and contractors who
+					was teh site of oil spill training for <acronym title="Public Works and Government Services Canada">PWGSC</acronym> employees and contractors who
 					work at the facility.</p>
 				<p>The course covered: the characteristics and safe handling of petroleum
 					products, personal protective equipment, containment, clean up, storage,
@@ -114,15 +114,15 @@
 					Erring
 					on the side of caution, the Esquimalt Graving Dock always has a boom deployed. </div>
 				<p>Perhaps more importantly, the marine spill response training is another
-					step in getting <acronym title="International Organization for Standardization">ISO</acronym> 14001 certification. <acronym title="International Organization for Standardization">ISO</acronym> 14001 is an internationally
+					step in getting <acronym title="International Organization for Standardization">ISO</acronym>&nbsp;14001 certification. <acronym title="International Organization for Standardization">ISO</acronym>&nbsp;14001 is an internationally
 					recognized environmental management standard and the Esquimalt Graving Dock
 					is the only large shipbuilding/repair facility in the world that will soon
 					be certified.</p>
-				<p>Bill Pleming is PWGSC's Regional Safety Officer and he travelled from
+				<p>Bill Pleming is <acronym title="Public Works and Government Services Canada">PWGSC</acronym>'s Regional Safety Officer and he travelled from
 					Vancouver to take part in the training. He says that what really impressed
-					him was the cooperation between PWGSC, the Departmetn of National Defence,
+					him was the cooperation between <acronym title="Public Works and Government Services Canada">PWGSC</acronym>, the Departmetn of National Defence,
 					and the private sector: &quot;It was really proactive all the way around.&quot; </p>
-				<p><em>Source: Ensemble, August 2000, Volume 8, No. 6</em></p>
+				<p><em>Source: Ensemble, August&nbsp;2000, Volume&nbsp;8, No.&nbsp;6</em></p>
 			</div>
 
 			<!-- CONTENT ENDS | FIN DU CONTENU -->
