--- a/env/gestion-management-eng.html
+++ b/env/gestion-management-eng.html
@@ -6,7 +6,7 @@
 <!-- HEADER BEGINS | DEBUT DE L'EN-TETE -->
 <!-- TITLE BEGINS | DEBUT DU TITRE -->
 
-<title>Environmental Management - EGD - PWGSC</title>
+<title>Environmental Management &ndash; EGD &ndash; PWGSC</title>
 
 <!-- TITLE ENDS | FIN DU TITRE -->
 <!-- METADATA BEGINS | DEBUT DES METADONNEES -->
@@ -109,15 +109,15 @@
 						can minimize the production of waste and pollution from activities such
 						as paint removal and surface preparation, painting, engine maintenance
 						and materials handling.</p>
-					<div style="text-align: center;"><img src="../images/barils-bache-drums-tarp.jpg" title="EBMP: (left) Drums for wastewater transfer; (right) Tarps for paint handling" alt="EBMP: (left) Drums for wastewater transfer; (right) Tarps for paint handling" width="402" height="131" /></div>
+					<div style="text-align: center;"><img src="../images/barils-bache-drums-tarp.jpg" alt="EBMP: (left) Drums for wastewater transfer; (right) Tarps for paint handling" width="402" height="131" /></div>
 				
           <div class="topPage"> <a href="#tphp" title="Return to Top of Page"><img src="/clf20/images/tphp.gif" width="19" height="12" alt="" /><br />Top of Page</a> </div>
 				</div>
 				<br />
 				<div style="float: left; clear: right;">
 					<h2 id="formation-training">Training &amp; Awareness</h2>
-					<div class="smallFont" style="float:left; padding-right:10px; padding-bottom:10px; width:150px; font-weight:bold; text-align:center"><span class="smallFont" style="float:left; padding-right:10px; padding-bottom:10px; width:150px; font-weight:bold; text-align:center"><img src="../images/deverse-spill.jpg" width="150" height="181" title="EGD employees discuss spill response procedures" alt="EGD employees discuss spill response procedures" /></span><br />
-				  EGD employees discuss spill response procedures</div>
+					<div class="smallFont" style="float:left; padding-right:10px; padding-bottom:10px; width:150px; font-weight:bold; text-align:center"><span class="smallFont" style="float:left; padding-right:10px; padding-bottom:10px; width:150px; font-weight:bold; text-align:center"><img src="../images/deverse-spill.jpg" width="150" height="181" alt="EGD employees discuss spill response procedures" /></span><br />
+				  <acronym title="Esquimalt Graving Dock">EGD</acronym> employees discuss spill response procedures</div>
 					<p>Esquimalt Graving Dock employees receive training in a number of areas
 						including health and safety, spill response, hazardous materials/waste
 						handling, environmental awareness, and other job specific requirements.</p>
@@ -128,8 +128,8 @@
 				</div>
 				<br />
 					<h2 id="participation">Participation and Outreach</h2>
-					<div class="smallFont" style="float:right; padding-left:10px; padding-bottom:10px; width:200px; font-weight:bold; text-align:center"><img src="../images/velo-bike.jpg" title="2004 EGD Bike to Work Week Team" alt="2004 EGD Bike to Work Week Team" width="200" height="150" /><br />
-						2004 EGD Bike to Work Week Team</div>
+					<div class="smallFont" style="float:right; padding-left:10px; padding-bottom:10px; width:200px; font-weight:bold; text-align:center"><img src="../images/velo-bike.jpg" alt="2004 EGD Bike to Work Week Team" width="200" height="150" /><br />
+						2004&nbsp;<acronym title="Esquimalt Graving Dock">EGD</acronym> Bike to Work Week Team</div>
 					<p>The Esquimalt Graving Dock promotes environmental awareness through participation
 						in outreach and educational events such as educational site tours, the
 						annual Greater Victoria Bike to Work Week and the <acronym title="Public Works and Government Services Canada">PWGSC</acronym> Green Citizen Passport
@@ -139,7 +139,7 @@
 				<br />
 				<div style="clear:right;">
 					<h2 id="ee-ea">Environmental Assessments (EA)</h2>
-					<img src="../images/construct.jpg" title="Construction site" alt="Construction site" width="200" height="149" style="float:left; padding-right:10px; padding-bottom:10px;" />
+					<img src="../images/construct.jpg" alt="Construction site" width="200" height="149" style="float:left; padding-right:10px; padding-bottom:10px;" />
 					<p>All new construction projects at the Esquimalt Graving Dock must be considered
 						for review under the Canadian Environmental Assessment Act (CEAA).
 						If an assessment is required, an action plan is created to manage any potential
