--- a/env/gestion-management-fra.html
+++ b/env/gestion-management-fra.html
@@ -6,7 +6,7 @@
 <!-- DEBUT DE L'EN-TETE | HEADER BEGINS -->
 <!-- DEBUT DU TITRE | TITLE BEGINS -->
 
-<title>Gestion de l'environnement - CSE - TPSGC</title>
+<title>Gestion de l'environnement &ndash; CSE &ndash; TPSGC</title>
 
 <!-- FIN DU TITRE | TITLE ENDS -->
 <!-- DEBUT DES METADONNEES | METADATA BEGINS -->
@@ -109,7 +109,7 @@
 						les d&eacute;chets et la pollution provenant d'activit&eacute;s comme l'enl&egrave;vement
 						de la peinture et la pr&eacute;paration de surface, le peinturage, l'entretien
 						de moteurs et la manutention de mat&eacute;riaux. </p>
-					<div style="text-align: center;"><img src="../images/barils-bache-drums-tarp.jpg" alt="MPGE - Barils pour le transport des eaux us&eacute;es; MPGE - B&acirc;ches &agrave; peinture" width="402" height="131" /></div>
+					<div style="text-align: center;"><img src="../images/barils-bache-drums-tarp.jpg" alt="MPGE &ndash; Barils pour le transport des eaux us&eacute;es; MPGE &ndash; B&acirc;ches &agrave; peinture" width="402" height="131" /></div>
 					<p>Pour Consulter une fiche r&eacute;capitulative des <acronym title="meilleures pratiques de gestion de l'environnement">MPGE</acronym>.</p>
 					<div class="topPage"> <a href="#tphp" title="Retourner au haut de la page"><img src="/clf20/images/tphp.gif" width="19" height="12" alt="" /><br />
 						Haut de la page</a> </div>
@@ -117,7 +117,7 @@
 				<br />
 				<div style="float: left; clear:right;">
 					<h2 id="formation-training">Formation et sensibilisation</h2>
-					<div class="smallFont" style="float:left; padding-right:10px; padding-bottom:10px; width:150px; font-weight:bold; text-align:center"><img src="../images/deverse-spill.jpg" title="Employ&eacute;s de la CSE discutant des m&eacute;thodes d'intervention en cas de d&eacute;versement" alt="Employ&eacute;s de la CSE discutant des m&eacute;thodes d'intervention en cas de d&eacute;versement" width="150" height="181" /><br />
+					<div class="smallFont" style="float:left; padding-right:10px; padding-bottom:10px; width:150px; font-weight:bold; text-align:center"><img src="../images/deverse-spill.jpg" alt="Employ&eacute;s de la CSE discutant des m&eacute;thodes d'intervention en cas de d&eacute;versement" width="150" height="181" /><br />
 						Employ&eacute;s de la <acronym title="cale s&egrave;che d'Esquimalt">CSE</acronym> discutant
 						des m&eacute;thodes d'intervention en cas de d&eacute;versement</div>
 					<p>Les employ&eacute;s de la cale s&egrave;che d'Esquimalt re&ccedil;oivent
@@ -135,8 +135,7 @@
 				<br />
         <h2 id="participation">Participation et information</h2>
         <div class="smallFont" style="float:right; padding-left:10px; padding-bottom:10px; width:200px; font-weight:bold; text-align:center"><img src="../images/velo-bike.jpg" alt="&Eacute;quipe de la Semaine v&eacute;lo-boulot de la CSE de 2004" width="200" height="150" /><br />
-          &Eacute;quipe de la Semaine v&eacute;lo-boulot de la <acronym title="cale s&egrave;che d'Esquimalt">CSE</acronym> de
-          2004</div>
+          &Eacute;quipe de la Semaine v&eacute;lo-boulot de la <acronym title="cale s&egrave;che d'Esquimalt">CSE</acronym> de&nbsp;2004</div>
         <p>La cale s&egrave;che d'Esquimalt participe &agrave; des activit&eacute;s
           d'information et d'&eacute;ducation, comme des visites &eacute;ducatives,
           la Semaine v&eacute;lo-boulot du Grand Victoria et le Programme de passeport
