--- a/env/initiatives-eng.html
+++ b/env/initiatives-eng.html
@@ -6,7 +6,7 @@
 <!-- HEADER BEGINS | DEBUT DE L'EN-TETE -->
 <!-- TITLE BEGINS | DEBUT DU TITRE -->
 
-<title>Environmental Initiatives - EGD - PWGSC</title>
+<title>Environmental Initiatives &ndash; EGD &ndash; PWGSC</title>
 
 <!-- TITLE ENDS | FIN DU TITRE -->
 <!-- METADATA BEGINS | DEBUT DES METADONNEES -->
@@ -102,8 +102,8 @@
 						Control of paint overspray and dust is particularly important due to the
 						proximity of the surrounding residential area and the marine environment.</p>
 					<p>An air quality monitoring station has been installed to provide instantaneous
-						information on PM<sub>10</sub> levels in the area (PM<sub>10</sub>: Particulate
-						matter under 10 microns in size). The data provided allows the <acronym title="Esquimalt Graving Dock">EGD</acronym> to
+						information on <acronym title="Particulate Matter">PM</acronym><sub>10</sub> levels in the area (PM<sub>10</sub>: Particulate
+						matter under 10&nbsp;microns in size). The data provided allows the <acronym title="Esquimalt Graving Dock">EGD</acronym> to
 						monitor the effectiveness of dust and paint control measures.</p>
 					<div class="topPage"> <a href="#tphp" title="Return to Top of Page"><img src="/clf20/images/tphp.gif" width="19" height="12" alt="" /><br />
 						Top of Page</a> </div>
@@ -173,7 +173,7 @@
 							heating nearby workshops, providing additional energy savings.</p>
 						<p>Examples of other conservation measures include:</p>
 						<ul>
-							<li>Installing of low flow spray nozzles for "water curtains" used for
+							<li>Installing of low flow spray nozzles for &ldquo;water curtains&rdquo; used for
 								dust capture during sandblast operations </li>
 							<li>Utilizing compact fluorescent light bulbs for area lighting </li>
 							<li>Installing controls for powering off lighting and computer systems
