--- a/env/initiatives-fra.html
+++ b/env/initiatives-fra.html
@@ -6,7 +6,7 @@
 <!-- DEBUT DE L'EN-TETE | HEADER BEGINS -->
 <!-- DEBUT DU TITRE | TITLE BEGINS -->
 
-<title>Initiatives environnementales - CSE - TPSGC</title>
+<title>Initiatives environnementales &ndash; CSE &ndash; TPSGC</title>
 
 <!-- FIN DU TITRE | TITLE ENDS -->
 <!-- DEBUT DES METADONNEES | METADATA BEGINS -->
@@ -92,7 +92,7 @@
 				<p>&Agrave; titre de propri&eacute;taire et d'exploitant de la cale s&egrave;che
 					d'Esquimalt, Travaux publics et Services gouvernementaux Canada est charg&eacute; de
 					mettre en &#339;uvre des programmes pour atteindre ses objectifs en mati&egrave;re
-					d'environnement. Voici des exemples d'initiatives environnementales cl&eacute;s:</p>
+					d'environnement. Voici des exemples d'initiatives environnementales cl&eacute;s&nbsp;:</p>
 				<div style="clear:right;">
 					<h2 id="qa-aq">Qualit&eacute; de l'air</h2>
 					<img src="../images/recouvert-cover.jpg" alt="Navire recouvert d'une b&acirc;che" width="200" height="180" style="float:left; padding-right:10px;" />
@@ -103,8 +103,7 @@
 						et du milieu marin.</p>
 					<p>Une station de surveillance de la qualit&eacute; de l'air a &eacute;t&eacute; install&eacute;e
 						afin d'obtenir des donn&eacute;es instantan&eacute;es sur les concentrations
-						de PM<sub>10</sub> (particules d'un diam&egrave;tre inf&eacute;rieur &agrave; 10
-						microns) dans le secteur. Ces donn&eacute;es permettent &agrave; la <acronym title="cale s&egrave;che d'Esquimalt">CSE</acronym> de
+						de PM<sub>10</sub>&nbsp;(particules d'un diam&egrave;tre inf&eacute;rieur &agrave; 10&nbsp;microns) dans le secteur. Ces donn&eacute;es permettent &agrave; la <acronym title="cale s&egrave;che d'Esquimalt">CSE</acronym> de
 						surveiller l'efficacit&eacute; des mesures prises pour contr&ocirc;ler
 						les poussi&egrave;res et la peinture.</p>
 					<div class="topPage"> <a href="#tphp" title="Retourner au haut de la page"><img src="/clf20/images/tphp.gif" width="19" height="12" alt="" /><br />
@@ -116,7 +115,7 @@
 						en &#339;uvre un certain nombre d'initiatives destin&eacute;es &agrave; am&eacute;liorer
 						la qualit&eacute; des eaux pluviales se d&eacute;versant dans le port et
 						des eaux us&eacute;es &eacute;vacu&eacute;es dans le r&eacute;seau d'&eacute;gouts.
-						En voici des exemples:</p>
+						En voici des exemples&nbsp;:</p>
 					<ul>
 						<li>Les eaux us&eacute;es mazouteuses produites aux installations de la <acronym title="cale s&egrave;che d'Esquimalt">CSE</acronym> sont
 							recueillies afin d'&ecirc;tre &eacute;limin&eacute;es ad&eacute;quatement
@@ -172,7 +171,7 @@
 						les carburants, les particules abrasives, les peintures, les solvants,
 						l'antigel et les piles et batteries. Par souci d'am&eacute;lioration continue
 						de la s&eacute;curit&eacute; des travailleurs et de r&eacute;duction des
-						risques de r&eacute;percussions sur l'environnement, la SCE a inclus des
+						risques de r&eacute;percussions sur l'environnement, la <acronym title="cale s&egrave;che d'Esquimalt">CSE</acronym> a inclus des
 						lignes directrices sure a gestion des mati&egrave;res/d&eacute;chets dangereux
 						dans son Manuel des meilleures pratiques de gestion de l'environnement.</p>
 					<p>La <acronym title="cale s&egrave;che d'Esquimalt">CSE</acronym>, qui
@@ -195,10 +194,10 @@
 						beaucoup moins d'eau douce. La chaleur produite par le fonctionnement du
 						compresseur est &eacute;galement utilis&eacute;e pour chauffer les ateliers
 						voisins, ce qui procure des &eacute;conomies d'&eacute;nergie additionnelles. </p>
-					<p>Voici d'autres exemples de mesures de conservation :</p>
+					<p>Voici d'autres exemples de mesures de conservation&nbsp;:</p>
 					<ul>
 						<li>Installation de buses &agrave; d&eacute;bit r&eacute;duit pour pulv&eacute;riser
-							les &laquo; rideaux d'eau &raquo; utilis&eacute;s pour capter la poussi&egrave;re
+							les &laquo;&nbsp;rideaux d'eau&nbsp;&raquo; utilis&eacute;s pour capter la poussi&egrave;re
 							lors des op&eacute;rations de d&eacute;capage au jet de sable</li>
 						<li>Utilisation d'ampoules fluorescentes compactes pour l'&eacute;clairage
 							des locaux</li>
