--- a/env/interet-interest-eng.html
+++ b/env/interet-interest-eng.html
@@ -6,7 +6,7 @@
 <!-- HEADER BEGINS | DEBUT DE L'EN-TETE -->
 <!-- TITLE BEGINS | DEBUT DU TITRE -->
 
-<title>Articles of Interest - EGD - PWGSC</title>
+<title>Articles of Interest &ndash; EGD &ndash; PWGSC</title>
 
 <!-- TITLE ENDS | FIN DU TITRE -->
 <!-- METADATA BEGINS | DEBUT DES METADONNEES -->
@@ -96,9 +96,9 @@
 			  </h1>
 				<ul>
 					<li><a href="simple-eng.html">Keeping It Simple: Bubble Curtain Saves Fish, Seals, and Valuable Time</a>						(2003)</li>
-					<li><a href="ecocivisme-environment-eng.html">EGD: A Good Environmental Citizen</a> (2002)</li>
+					<li><a href="ecocivisme-environment-eng.html"><acronym title="Esquimalt Graving Dock">EGD</acronym>: A Good Environmental Citizen</a> (2002)</li>
 					<li><a href="barrage-boom-eng.html">Lowering the Boom on Oil Spills</a> (2001) </li>
-					<li><a href="voie-way-eng.html"><acronym title="Esquimalt Graving Dock">EGD</acronym>: Leading the Way with <acronym title="International Standards Organization">ISO</acronym> 14001</a>  (2001)</li>
+					<li><a href="voie-way-eng.html"><acronym title="Esquimalt Graving Dock">EGD</acronym>: Leading the Way with <acronym title="International Standards Organization">ISO</acronym>&nbsp;14001</a>&nbsp;(2001)</li>
 				</ul>
 			</div>
 			<!-- CONTENT ENDS | FIN DU CONTENU -->
