--- a/env/interet-interest-fra.html
+++ b/env/interet-interest-fra.html
@@ -6,7 +6,7 @@
 <!-- DEBUT DE L'EN-TETE | HEADER BEGINS -->
 <!-- DEBUT DU TITRE | TITLE BEGINS -->
 
-<title>Articles d'Int&eacute;r&ecirc;t - CSE - TPSGC</title>
+<title>Articles d'Int&eacute;r&ecirc;t &ndash; CSE &ndash; TPSGC</title>
 
 <!-- FIN DU TITRE | TITLE ENDS -->
 <!-- DEBUT DES METADONNEES | METADATA BEGINS -->
@@ -15,7 +15,7 @@
 <link rel="schema.dc" href="http://purl.org/dc/terms/" />
 
 <meta name="dc.title" content="Articles d'Int&eacute;r&ecirc;t - CSE - TPSGC" />
-<meta name="dc.subject" scheme="gccore" content="Navire; Quai; Environnement; Information;  Indexes" />
+<meta name="dc.subject" scheme="gccore" content="Navire; Quai; Environnement; Information;  Index" />
 
 <meta name="dc.language" scheme="ISO639-2/T" content="fra" />
 <meta name="dc.creator" content="Gouvernement du Canada, Travaux publics et Services gouvernementaux Canada" />
@@ -95,7 +95,7 @@
 					<li><a href="simple-fra.html">Une id&eacute;e toute simple&nbsp;: un rideau de bulles d'air permet de sauver des poissons et des phoques, et d'&eacute;pargner un temps pr&eacute;cieux</a> (2003)</li>
 					<li><a href="ecocivisme-environment-fra.html">La cale s&egrave;che d'Esquimalt&nbsp;: un exemple d'&eacute;cocivisme</a> (2002) </li>
 					<li><a href="barrage-boom-fra.html">La cale s&egrave;che d'Esquimalt fait barrage aux d&eacute;versements de p&eacute;trole</a> (2001) </li>
-					<li><a href="voie-way-fra.html"><acronym title="cale s&egrave;che d'Esquimalt">CSE</acronym>&nbsp;: chef de file en voie vers la certification <acronym title="Organisation internationale de normailisation">ISO</acronym> 14001</a>  (2001)</li>
+					<li><a href="voie-way-fra.html"><acronym title="cale s&egrave;che d'Esquimalt">CSE</acronym>&nbsp;: chef de file en voie vers la certification <acronym title="Organisation internationale de normailisation">ISO</acronym>&nbsp;14001</a>&nbsp;(2001)</li>
 				</ul>
 			</div>
 			<!-- FIN DU CONTENU | CONTENT ENDS -->
