--- a/env/politique-policy-eng.html
+++ b/env/politique-policy-eng.html
@@ -6,7 +6,7 @@
 <!-- HEADER BEGINS | DEBUT DE L'EN-TETE -->
 <!-- TITLE BEGINS | DEBUT DU TITRE -->
 
-<title>Environmental Policy Statement - EGD - PWGSC</title>
+<title>Environmental Policy Statement &ndash; EGD &ndash; PWGSC</title>
 <!-- TITLE ENDS | FIN DU TITRE -->
 <!-- METADATA BEGINS | DEBUT DES METADONNEES -->
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
@@ -100,7 +100,7 @@
 					<p>
             The Esquimalt Graving Dock and its users realize that environmental
 						management is an integral part of attaining that
-						goal. Through the implementation of an <acronym title="International Standards Organization">ISO</acronym> 14001
+						goal. Through the implementation of an <acronym title="International Standards Organization">ISO</acronym>&nbsp;14001
 						Environmental management System, we are committed
 						to managing the actual and potential environmental
 						impacts of our operations.
