--- a/env/politique-policy-fra.html
+++ b/env/politique-policy-fra.html
@@ -6,7 +6,7 @@
 <!-- DEBUT DE L'EN-TETE | HEADER BEGINS -->
 <!-- DEBUT DU TITRE | TITLE BEGINS -->
 
-<title>Politique environnementale - CSE - TPSGC</title>
+<title>Politique environnementale &ndash; CSE &ndash; TPSGC</title>
 
 <!-- FIN DU TITRE | TITLE ENDS -->
 <!-- DEBUT DES METADONNEES | METADATA BEGINS -->
@@ -96,7 +96,7 @@
         <p>La Cale s&egrave;che d'Esquimalt et ses usagers sont conscients que l'atteinte
           de cet objectif passe obligatoirement par la gestion
           de l'environnement. La mise en &oelig;uvrue d'un syst&egrave;me de gestion de
-          l'environnement certifi&eacute; <acronym title="International Standards Organization">ISO</acronym> 14001&nbsp;traduit notre engagement &agrave; g&eacute;rer
+          l'environnement certifi&eacute; <acronym title="Organisation internationale de normailisation">ISO</acronym>&nbsp;14001&nbsp;traduit notre engagement &agrave; g&eacute;rer
           les r&eacute;percussions que nos activit&eacute;s ont ou pourraient
           avoir sur l'environnement. </p>
 				<p>Pour remplir notre engagement, nous allons&nbsp;:</p>
