--- a/env/programme-program-eng.html
+++ b/env/programme-program-eng.html
@@ -6,7 +6,7 @@
 <!-- HEADER BEGINS | DEBUT DE L'EN-TETE -->
 <!-- TITLE BEGINS | DEBUT DU TITRE -->
 
-<title>Environmental Program - EGD - PWGSC</title>
+<title>Environmental Program &ndash; EGD &ndash; PWGSC</title>
 
 <!-- TITLE ENDS | FIN DU TITRE -->
 <!-- METADATA BEGINS | DEBUT DES METADONNEES -->
@@ -105,15 +105,15 @@
 				business at the facility is conducted in an environmentally responsible manner,
 				the <acronym title="Esquimalt Graving Dock">EGD</acronym> has implemented
 				an Environmental Management System (<acronym title="Environmental Management System">EMS</acronym>)
-				certified to the internationally recognized <acronym title="International Organization for Standardization">ISO</acronym> 14001 <acronym title="Environmental Management System">EMS</acronym> standard.
+				certified to the internationally recognized <acronym title="International Organization for Standardization">ISO</acronym>&nbsp;14001 <acronym title="Environmental Management System">EMS</acronym> standard.
       </p>
 
-      <h2 id="iso"><acronym title="International Organization for Standardization">ISO</acronym> 14001</h2>
+      <h2 id="iso"><acronym title="International Organization for Standardization">ISO</acronym>&nbsp;14001</h2>
 
-      <p>The <acronym title="International Organization for Standardization">ISO</acronym> 14001
+      <p>The <acronym title="International Organization for Standardization">ISO</acronym>&nbsp;14001
         certification is an internationally recognized standard for the development
         and implementation of an Environmental Management System (<acronym title="Environmental Management System">EMS</acronym>).
-        Qualifying for this recognition in 2001, the <acronym title="Esquimalt Graving Dock">EGD</acronym> has
+        Qualifying for this recognition in&nbsp;2001, the <acronym title="Esquimalt Graving Dock">EGD</acronym> has
         implemented this management system to help identify and prioritize environmental
         issues on site.</p>
 
@@ -122,7 +122,7 @@
           of pollution, the protection of the natural environment and the compliance
           with applicable environmental regulations and standards.</p>
     
-      <p>Since certification in 2001, this environmental management system has provided
+      <p>Since certification in&nbsp;2001, this environmental management system has provided
       the framework for the implementation of successful, cost effective environmental
       programs and initiatives. These programs help ensure on site businesses conduct
       their operations in a conscientious manner by reducing environmental impacts
