--- a/env/programme-program-fra.html
+++ b/env/programme-program-fra.html
@@ -6,7 +6,7 @@
 <!-- DEBUT DE L'EN-TETE | HEADER BEGINS -->
 <!-- DEBUT DU TITRE | TITLE BEGINS -->
 
-<title>Programme environnemental - CSE - TPSGC</title>
+<title>Programme environnemental &ndash; CSE &ndash; TPSGC</title>
 
 <!-- FIN DU TITRE | TITLE ENDS -->
 <!-- DEBUT DES METADONNEES | METADATA BEGINS -->
@@ -97,12 +97,12 @@
 				Afin de garantir que les activit&eacute;s men&eacute;es dans ses installations
 				s'effectuent dans le respect de l'environnement, la <acronym title="cale s&egrave;che d'Esquimalt">CSE</acronym> a
 				mis en &#339;uvre un syst&egrave;me de gestion de l'environnement (<acronym title="syst&egrave;me de gestion de l'environnement">SGE</acronym>)
-				qui a &eacute;t&eacute; certifi&eacute; conforme &agrave; la norme internationale <acronym title="Organisation internationale de normailisation">ISO</acronym> 14001
+				qui a &eacute;t&eacute; certifi&eacute; conforme &agrave; la norme internationale <acronym title="Organisation internationale de normailisation">ISO</acronym>&nbsp;14001
 				concerant les <acronym title="syst&egrave;me de gestion de l'environnement">SGE</acronym>.</p>
 
-      <h2 id="iso"><acronym title="Organisation internationale de normailisation">ISO</acronym> 14001</h2>
+      <h2 id="iso"><acronym title="Organisation internationale de normailisation">ISO</acronym>&nbsp;14001</h2>
 
-			<p>Depuis sa certification en 2001, ce syst&egrave;me de gestion de l'environnement
+			<p>Depuis sa certification en&nbsp;2001, ce syst&egrave;me de gestion de l'environnement
 				a servi &agrave; encadrer la mise en &#339;uvre d'initiatives et de programmes
 				environnementaux fructueux et rentables. Ces programmes contribuent &agrave; garantir
 				que les entreprises ouvrant dans nos installations effectuent leurs travaux
@@ -112,7 +112,7 @@
 				des installations et de la collectivit&eacute; environnante.</p>
 			<p>L'engagement de la cale s&egrave;che d'Esquimalt envers la protection de
 				l'environnement est &eacute;nonc&eacute; dans la <a href="politique-policy-fra.html">Politique
-				environnementale</a> de la CSE&nbsp;: </p>
+				environnementale</a> de la <acronym title="cale s&egrave;che d'Esquimalt">CSE</acronym>&nbsp;: </p>
 			<ul style="list-style-type:none; padding-left:0; margin-left:0; font-size:90%">
 				<li><a href="gestion-management-fra.html">Gestion de l'environnement</a>
 					<ul style="list-style-type:none">
