--- a/env/projects-projets-eng.html
+++ b/env/projects-projets-eng.html
@@ -72,7 +72,7 @@
 		<!-- BREAD CRUMB BEGINS | DEBUT DE LA PISTE DE NAVIGATION -->
 		<p class="breadcrumb">
 			<!--#include virtual="/clf20/ssi/bread-pain-eng.html"--><!--#include virtual="/pac/cse-egd/ssi/bread-pain-eng.html"-->
-					&gt; EGD: Capital Projects</p>
+					&gt; <acronym title="Esquimalt Graving Dock">EGD</acronym>: Capital Projects</p>
 		<!-- BREAD CRUMBS END | FIN DE LA PISTE DE NAVIGATION -->
 		<div class="colLayout">
 			<!-- TWO COLUMN LAYOUT BEGINS | DEBUT DE LA MISE EN PAGE DE DEUX COLONNES -->
@@ -89,20 +89,20 @@
 
 				<h1 id="cont">
 					<!-- CONTENT TITLE BEGINS | DEBUT DU TITRE DU CONTENU -->
-					EGD: Capital Projects 
+					<acronym title="Esquimalt Graving Dock">EGD</acronym>: Capital Projects 
 					<!-- CONTENT TITLE ENDS | FIN DU TITRE DU CONTENU -->
 				</h1>
 
         <p>
-          The Esquimalt Graving Dock has a number of exciting changes both in the planning and the developmental stages.  The primary project will be the installation of a new 30 tonne double boom level luffing crane that will be erected on the south side of the basin dock.  Preporation for the erection of the new crane is scheduled to commence in April, 2010. The approximate date that the new 30 tonne crane will be in service is the end of July, 2010.  Following the erection and commissioning of the new crane on the south side of the basin dock work will then commence immediately on dismantling our existing 30 tonne crane for refurbishment and modernization of its motors and drives.  The existing 30 tonne crane will be disassembled piece by piece and placed in dock bottom in Section # 3. There it will be inspected completely and repaired, where required, then reassembled on the north side of the basin dock on the tracks of our current 44 tonne hammerhead crane.  This work is scheduled to begin immediately following the commissioning of the new crane approximatley the end of July, 2010.  The contractor for this project will utilize space in dock bottom in Section # 3 as well as the areas adjacent to Section # 3 top side for their work area on this crane.  The refurbishment and modernization of the EGD’s current 30 tonne crane will run from July, 2010 through to approximately November, 2010.  Once our existing 30 tonne crane is assembled and is back in service on the north side of the basin dock work will then commence on the removal of our 44 tonne hammerhead crane from the north side of the basin dock.  
+          The Esquimalt Graving Dock has a number of exciting changes both in the planning and the developmental stages.  The primary project will be the installation of a new 30&nbsp;tonne double boom level luffing crane that will be erected on the south side of the basin dock.  Preporation for the erection of the new crane is scheduled to commence in April,&nbsp;2010. The approximate date that the new 30&nbsp;tonne crane will be in service is the end of July,&nbsp;2010.  Following the erection and commissioning of the new crane on the south side of the basin dock work will then commence immediately on dismantling our existing 30&nbsp;tonne crane for refurbishment and modernization of its motors and drives.  The existing 30&nbsp;tonne crane will be disassembled piece by piece and placed in dock bottom in Section&nbsp;#&nbsp;3. There it will be inspected completely and repaired, where required, then reassembled on the north side of the basin dock on the tracks of our current 44&nbsp;tonne hammerhead crane.  This work is scheduled to begin immediately following the commissioning of the new crane approximatley the end of July,&nbsp;2010.  The contractor for this project will utilize space in dock bottom in Section&nbsp;#&nbsp;3 as well as the areas adjacent to Section&nbsp;#&nbsp;3 top side for their work area on this crane.  The refurbishment and modernization of the <acronym title="Esquimalt Graving Dock">EGD</acronym>'s current 30&nbsp;tonne crane will run from July,&nbsp;2010 through to approximately November,&nbsp;2010.  Once our existing 30&nbsp;tonne crane is assembled and is back in service on the north side of the basin dock work will then commence on the removal of our 44&nbsp;tonne hammerhead crane from the north side of the basin dock.  
         </p>
 
         <p>
-          In addition to the above projects the Esquimalt Graving Dock is seeking funding for a 100 foot extension of the basin dock east from the east wall of Section # 3.  The answer to our funding request for this work will be known some time in February, 2010.  The 100 foot extension will facilitate extended docking periods for the DND frigate mid life refit project, as well as allow the docking of a number of the larger vessels from the BC Ferries fleet in only one section. This will leave approximately 750 feet of dry dock for other refit and repair work. We understand that the complete closure of Section # 3 will be an inconvenience for all from approximately May, 2010 through to the end of March, 2011 but we think that all would agree that this relatively short term inconvenience, approximately 10 months, will benefit all for the long term with additional dry docking space.
+          In addition to the above projects the Esquimalt Graving Dock is seeking funding for a 100&nbsp;foot extension of the basin dock east from the east wall of Section&nbsp;#&nbsp;3.  The answer to our funding request for this work will be known some time in February,&nbsp;2010.  The 100&nbsp;foot extension will facilitate extended docking periods for the <acronym title="Department of National Defense">DND</acronym> frigate mid life refit project, as well as allow the docking of a number of the larger vessels from the <acronym title="British Columbia">BC</acronym> Ferries fleet in only one section. This will leave approximately 750&nbsp;feet of dry dock for other refit and repair work. We understand that the complete closure of Section&nbsp;#&nbsp;3 will be an inconvenience for all from approximately May,&nbsp;2010 through to the end of March,&nbsp;2011 but we think that all would agree that this relatively short term inconvenience, approximately 10&nbsp;months, will benefit all for the long term with additional dry docking space.
         </p>
 
         <p>
-        If anyone has any questions on any of the above or would like further information please do not hesitate to contact <a href="mailto:david.latoski@pwgsc-tpsgc.gc.ca">David Latoski</a>, Operations Manager, Esquimalt Graving Dock at (250) 363-8056.  
+        If anyone has any questions on any of the above or would like further information please do not hesitate to contact <a href="mailto:david.latoski@pwgsc-tpsgc.gc.ca">David Latoski</a>, Operations Manager, Esquimalt Graving Dock at 250-363-8056.  
         </p>
 			</div>
 
