--- a/env/simple-eng.html
+++ b/env/simple-eng.html
@@ -6,7 +6,7 @@
 <!-- HEADER BEGINS | DEBUT DE L'EN-TETE -->
 <!-- TITLE BEGINS | DEBUT DU TITRE -->
 
-<title>Keeping It Simple - EGD - PWGSC</title>
+<title>Keeping It Simple &ndash; EGD &ndash; PWGSC</title>
 <!-- TITLE ENDS | FIN DU TITRE -->
 <!-- METADATA BEGINS | DEBUT DES METADONNEES -->
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
@@ -99,11 +99,11 @@
 				<p>The new bubble curtain at the Esquimalt Graving Dock is saving hundreds
 					of salmon and keeping shipyards running smoothly.</p>
 				<p>The <acronym title="Public Works and Government Services Canada">PWGSC</acronym>-owned dock in Victoria, <acronym title="British Columbia">BC</acronym>, is a world-class water vessel repair
-					facility. At over 350 metres long (the length of three football
-					fields) and nearly 50 metres wide, it is wider than the Panama
-					Canal and can accommodate 90 per-cent of existing ocean vessels.
-					PWGSC leases space to private shipyards, which work on BC
-					Ferries, cruise ships, and other vessels. About 70 ships
+					facility. At over 350&nbsp;metres long (the length of three football
+					fields) and nearly 50&nbsp;metres wide, it is wider than the Panama
+					Canal and can accommodate 90&nbsp;per-cent of existing ocean vessels.
+					<acronym title="Public Works and Government Services Canada">PWGSC</acronym> leases space to private shipyards, which work on <acronym title="British Columbia">BC</acronym>
+					Ferries, cruise ships, and other vessels. About 70&nbsp;ships
 					come in and out every year.</p>
 				<h2>Unwanted Visitors </h2>
 				<p>Up until recently, the challenge was the uninvited guests that came in
@@ -112,7 +112,7 @@
 					inside, stranded on the dock floor.</p>
 				<p>Seals had to be coaxed into a first aid basket, and lifted by a crane
 					over the dock walls to be released back into the ocean.</p>
-				<p>&quot;It was quite an ordeal getting them out,&quot; says Daryl Lawes, PWGSC Environmetnal
+				<p>&quot;It was quite an ordeal getting them out,&quot; says Daryl Lawes, <acronym title="Public Works and Government Services Canada">PWGSC</acronym> Environmetnal
 					Coordinator, Environmetnal Services Directorate in Victoria.</p>
 				<p>&quot;They would bite and snap at the brooms used, and up to six dock
 					employees would be needed to rescue them.&quot;</p>
@@ -122,15 +122,15 @@
 					rivers led to a significant increase in fish activity. The
 					grey graving dock simply looked like a river mouth to the
 					salmon, and attracted them in droves.</p>
-				<p>Aftter the dock water was pumped out, up to 20 employees in gumboots would
+				<p>Aftter the dock water was pumped out, up to 20&nbsp;employees in gumboots would
 					run around the dock floor with nets, scooping up fish. Ship
 					owners stood by and waited, unhappy that they were losing
 					precious dock time and that sometimes hundreds of repair
 					personnel were forced to remain idle.</p>
 				<p>it came to a head about a year and a half ago when a ship docked at around
-					11:30 p.m. When the water was pumped out, almost 150 salmon
-					&mdash; at 20 to 25 kilos each &mdash; were splashing on the dock floor.</p>
-				<p>PWGSC Dock Operator Bill Anderson recalls being told to put his hipwaders
+					11:30&nbsp;p.m. When the water was pumped out, almost 150&nbsp;salmon
+					&mdash; at 20&nbsp;to 25&nbsp;kilos each &mdash; were splashing on the dock floor.</p>
+				<p><acronym title="Public Works and Government Services Canada">PWGSC</acronym> Dock Operator Bill Anderson recalls being told to put his hipwaders
 					on. &quot;There were fish everywhere,&quot; he says. &quot;I've never seen
 					so many. We were told to try to save the female coho salmon
 					and we were there until four in the morning with all the
@@ -146,8 +146,8 @@
 					to come up with a solution. His research revealed a bubble
 					curtain that was used at some fish hatcheries and dams, and
 					he adapted the concept for the graving dock. A long pipe
-					was fitted to run down the 25 metre walls and across the
-					floor. A series of holes,     about 60 centimetres apart,
+					was fitted to run down the 25&nbsp;metre walls and across the
+					floor. A series of holes,     about 60&nbsp;centimetres apart,
 					was drilled into the pipes and a pressure gauge fitted on top.</p>
 				<p>Mr anderson said the project was an experiment and it earned him the nickname
 					&quot;Bubble Boy.&quot; &quot;I got teased a lot. People told me they weren't
