--- a/his/1921-fra.html
+++ b/his/1921-fra.html
@@ -6,7 +6,7 @@
 <!-- DEBUT DE L'EN-TETE | HEADER BEGINS -->
 <!-- DEBUT DU TITRE | TITLE BEGINS -->
 
-<title>1921 - 1923 - CSE - TPSGC</title>
+<title>1921 &ndash; 1923 &ndash; CSE &ndash; TPSGC</title>
 
 <!-- FIN DU TITRE | TITLE ENDS -->
 <!-- DEBUT DES METADONNEES | METADATA BEGINS -->
@@ -69,7 +69,7 @@
 		<!-- DEBUT DE LA PISTE DE NAVIGATION | BREAD CRUMB BEGINS -->
 		<p class="breadcrumb">
 			<!--#include virtual="/clf20/ssi/bread-pain-fra.html"--><!--#include virtual="/pac/cse-egd/ssi/bread-pain-fra.html"-->
-			&gt;&nbsp;<a href="../historique-history-fra.html">Historique</a> &gt; 1921-1923</p>
+			&gt;&nbsp;<a href="../historique-history-fra.html">Historique</a> &gt;&nbsp;1921-1923</p>
 		<!-- BREAD CRUMBS END | FIN DE LA PISTE DE NAVIGATION -->
 		<div class="colLayout">
 			<!-- DEBUT DE LA MISE EN PAGE DE DEUX COLONNES | TWO COLUMN LAYOUT BEGINS -->
@@ -89,15 +89,15 @@
 					<!-- CONTENT TITLE ENDS | FIN DU TITRE DU CONTENU -->
 					</h1>
 				<div class="option4">
-					<h2>1921&nbsp;- 1923</h2>
+					<h2>1921&nbsp;&ndash; 1923</h2>
 					<img src="../images/historique_history/1921_1.jpg" alt="Vue de la cale en direction ouest" width="300" height="246" style="padding-bottom:10px;" /><br />
 					<img src="../images/historique_history/1921_2.jpg" alt="Excavation dans le roc" width="300" height="243" /> </div>
 				<p>Choisir une ann&eacute;e&nbsp;:</p>
 				<ul>
-					<li><a href="1921-fra.html">Historique 1921&nbsp;- 1923</a></li>
-					<li><a href="1925-fra.html">Historique 1925</a></li>
-					<li><a href="1926-fra.html">Historique 1926</a></li>
-					<li><a href="1927-fra.html">Historique 1927</a></li>
+					<li><a href="1921-fra.html">Historique&nbsp;1921&nbsp;&ndash; 1923</a></li>
+					<li><a href="1925-fra.html">Historique&nbsp;1925</a></li>
+					<li><a href="1926-fra.html">Historique&nbsp;1926</a></li>
+					<li><a href="1927-fra.html">Historique&nbsp;1927</a></li>
 				</ul>
 			</div>
 
