--- a/his/1926-eng.html
+++ b/his/1926-eng.html
@@ -6,7 +6,7 @@
 <!-- HEADER BEGINS | DEBUT DE L'EN-TETE -->
 <!-- TITLE BEGINS | DEBUT DU TITRE -->
 
-<title>1926 - EGD - PWGSC</title>
+<title>1926 &ndash; EGD &ndash; PWGSC</title>
 
 <!-- TITLE ENDS | FIN DU TITRE -->
 <!-- METADATA BEGINS | DEBUT DES METADONNEES -->
@@ -73,7 +73,7 @@
 		<!-- BREAD CRUMB BEGINS | DEBUT DE LA PISTE DE NAVIGATION -->
 		<p class="breadcrumb">
 			<!--#include virtual="/clf20/ssi/bread-pain-eng.html"--><!--#include virtual="/pac/cse-egd/ssi/bread-pain-eng.html"-->
-			&gt;&nbsp;<a href="../historique-history-eng.html">History</a> &gt; 1926</p>
+			&gt;&nbsp;<a href="../historique-history-eng.html">History</a> &gt;&nbsp;1926</p>
 		<!-- BREAD CRUMBS END | FIN DE LA PISTE DE NAVIGATION -->
 		<div class="colLayout">
 			<!-- TWO COLUMN LAYOUT BEGINS | DEBUT DE LA MISE EN PAGE DE DEUX COLONNES -->
@@ -98,10 +98,10 @@
 					<img src="../images/historique_history/1926_2.jpg" alt="S.S. Reginolite in the drydock" width="300" height="245" /> </div>
 				<p>Select a year:</p>
 				<ul>
-					<li><a href="1921-eng.html">History 1921&nbsp;- 1923</a></li>
-					<li><a href="1925-eng.html">History 1925</a></li>
-					<li><a href="1926-eng.html">History 1926</a></li>
-					<li><a href="1927-eng.html">History 1927</a></li>
+					<li><a href="1921-eng.html">History&nbsp;1921 &ndash; 1923</a></li>
+					<li><a href="1925-eng.html">History&nbsp;1925</a></li>
+					<li><a href="1926-eng.html">History&nbsp;1926</a></li>
+					<li><a href="1927-eng.html">History&nbsp;1927</a></li>
 				</ul>
 			</div>
 
