--- a/his/1927-fra.html
+++ b/his/1927-fra.html
@@ -6,7 +6,7 @@
 <!-- DEBUT DE L'EN-TETE | HEADER BEGINS -->
 <!-- DEBUT DU TITRE | TITLE BEGINS -->
 
-<title>1927 - CSE - TPSGC</title>
+<title>1927 &ndash; CSE &ndash; TPSGC</title>
 
 <!-- FIN DU TITRE | TITLE ENDS -->
 <!-- DEBUT DES METADONNEES | METADATA BEGINS -->
@@ -69,7 +69,7 @@
 		<!-- DEBUT DE LA PISTE DE NAVIGATION | BREAD CRUMB BEGINS -->
 		<p class="breadcrumb">
 			<!--#include virtual="/clf20/ssi/bread-pain-fra.html"--><!--#include virtual="/pac/cse-egd/ssi/bread-pain-fra.html"-->
-			&gt;&nbsp;<a href="../historique-history-fra.html">Historique</a> &gt; 1927&nbsp;</p>
+			&gt;&nbsp;<a href="../historique-history-fra.html">Historique</a> &gt;&nbsp;1927&nbsp;</p>
 		<!-- BREAD CRUMBS END | FIN DE LA PISTE DE NAVIGATION -->
 		<div class="colLayout">
 			<!-- DEBUT DE LA MISE EN PAGE DE DEUX COLONNES | TWO COLUMN LAYOUT BEGINS -->
@@ -96,10 +96,10 @@
 
 				<p>Choisir une ann&eacute;e&nbsp;:</p>
 				<ul>
-					<li><a href="1921-fra.html">Historique 1921&nbsp;- 1923</a></li>
-					<li><a href="1925-fra.html">Historique 1925</a></li>
-					<li><a href="1926-fra.html">Historique 1926</a></li>
-					<li><a href="1927-fra.html">Historique 1927</a></li>
+					<li><a href="1921-fra.html">Historique&nbsp;1921&nbsp;&ndash; 1923</a></li>
+					<li><a href="1925-fra.html">Historique&nbsp;1925</a></li>
+					<li><a href="1926-fra.html">Historique&nbsp;1926</a></li>
+					<li><a href="1927-fra.html">Historique&nbsp;1927</a></li>
 				</ul>
 			</div>
 			<!-- FIN DU CONTENU | CONTENT ENDS -->
