--- a/his/article-eng.html
+++ b/his/article-eng.html
@@ -6,7 +6,7 @@
 <!-- HEADER BEGINS | DEBUT DE L'EN-TETE -->
 <!-- TITLE BEGINS | DEBUT DU TITRE -->
 
-<title>QE Article - EGD - PWGSC</title>
+<title>QE Article &ndash; EGD &ndash; PWGSC</title>
 
 <!-- TITLE ENDS | FIN DU TITRE -->
 <!-- METADATA BEGINS | DEBUT DES METADONNEES -->
@@ -73,7 +73,7 @@
 		<!-- BREAD CRUMB BEGINS | DEBUT DE LA PISTE DE NAVIGATION -->
 		<p class="breadcrumb">
 			<!--#include virtual="/clf20/ssi/bread-pain-eng.html"--><!--#include virtual="/pac/cse-egd/ssi/bread-pain-eng.html"-->
-			&gt;&nbsp;<a href="../historique-history-eng.html">History</a> &gt; QE Article<br />
+			&gt;&nbsp;<a href="../historique-history-eng.html">History</a> &gt; <acronym title="Queen Elizabeth">QE</acronym> Article<br />
 </p>
 		<!-- BREAD CRUMBS END | FIN DE LA PISTE DE NAVIGATION -->
 		<div class="colLayout">
@@ -93,12 +93,12 @@
 					<!-- CONTENT TITLE BEGINS | DEBUT DU TITRE DU CONTENU -->
 					History<!-- CONTENT TITLE ENDS | FIN DU TITRE DU CONTENU -->
 					</h1>
-				<h2>QE Article </h2>
+				<h2><acronym title="Queen Elizabeth">QE</acronym> Article </h2>
 				<p><em>Loose Lips Sink Ships</em></p>
 				<p>Longtime Esquimalt resident Ken Moffat was just five-years-old when the
 					massive passenger liner Queen Elizabeth crept into Esquimalt Harbour in
 					1942&nbsp;but he remembers the moment like it was yesterday. </p>
-				<p>The QE was at the Esquimalt Graving Dock to be secretly refitted from
+				<p>The <acronym title="Queen Elizabeth">QE</acronym> was at the Esquimalt Graving Dock to be secretly refitted from
 					a passenger liner to a troopship capable of carrying a full army division
 					of 15,000&nbsp;men. This invaluable Allied asset was one of the most attractive
 					targets in the world and almost no one knew with certainty where she was.
@@ -115,9 +115,9 @@
 					fence and looking up at a enourmous ship illuminated by moonlight. We stood
 					there for about five minutes before an <acronym title="Member of Parliament">MP</acronym> saw us and asked us to move along.&quot; </p>
 				<p>The security measures worked. After a 13-day stay, with round-the-clock
-					shifts, the QE sailed away an armed troop ship - and Victoria breathed a
+					shifts, the <acronym title="Queen Elizabeth">QE</acronym> sailed away an armed troop ship &ndash; and Victoria breathed a
 					sigh of relief.</p>
-				<div style="text-align: center;"><img src="../images/ssqe.jpg" alt="S.S. Queen Elizabeth - Conversion To Troop Carrier, February, 1942" width="349" height="418" /></div>
+				<div style="text-align: center;"><img src="../images/ssqe.jpg" alt="S.S. Queen Elizabeth &ndash; Conversion To Troop Carrier, February, 1942" width="349" height="418" /></div>
 			</div>
 
 			<!-- CONTENT ENDS | FIN DU CONTENU -->
