--- a/his/article-fra.html
+++ b/his/article-fra.html
@@ -6,7 +6,7 @@
 <!-- DEBUT DE L'EN-TETE | HEADER BEGINS -->
 <!-- DEBUT DU TITRE | TITLE BEGINS -->
 
-<title>Article sur le QE - CSE - TPSGC</title>
+<title>Article sur le QE &ndash; CSE &ndash; TPSGC</title>
 
 <!-- FIN DU TITRE | TITLE ENDS -->
 <!-- DEBUT DES METADONNEES | METADATA BEGINS -->
@@ -70,7 +70,7 @@
 		<p class="breadcrumb">
 			<!--#include virtual="/clf20/ssi/bread-pain-fra.html"--><!--#include virtual="/pac/cse-egd/ssi/bread-pain-fra.html"-->
 			&gt;&nbsp;<a href="../historique-history-fra.html">Historique</a> &gt; Article
-			sur le QE</p>
+			sur le <acronym title="Queen Elizabeth">QE</acronym></p>
 		<!-- BREAD CRUMBS END | FIN DE LA PISTE DE NAVIGATION -->
 		<div class="colLayout">
 			<!-- DEBUT DE LA MISE EN PAGE DE DEUX COLONNES | TWO COLUMN LAYOUT BEGINS -->
@@ -89,13 +89,13 @@
 					Historique
 					<!-- CONTENT TITLE ENDS | FIN DU TITRE DU CONTENU -->
 					</h1>
-				<h2>Article sur le QE</h2>
+				<h2>Article sur le <acronym title="Queen Elizabeth">QE</acronym></h2>
 				<p><em>Un secret bien gard&eacute;</em></p>
 				<p>Ken Moffat, originaire d'Esquimalt, n'avait que cinq ans lorsque le tr&egrave;s
 					majestueux paquebot Queen Elizabeth fit son entr&eacute;e dans le port d'Esquimalt.
 					C'&eacute;tait en 1942&nbsp;et il se rappelle de cette journ&eacute;e comme si
 					c'&eacute;tait hier. </p>
-				<p>Le QE avait &eacute;t&eacute; amen&eacute; &agrave; la cale s&egrave;che
+				<p>Le <acronym title="Queen Elizabeth">QE</acronym> avait &eacute;t&eacute; amen&eacute; &agrave; la cale s&egrave;che
 					d'Esquimalt dans le plus grand secret, afin d'&ecirc;tre transform&eacute; en
 					navire militaire pour le transport des troupes. Capable de transporter une
 					division compl&egrave;te de 15&nbsp;000&nbsp;hommes, ce b&acirc;timent indispensable
@@ -110,7 +110,7 @@
 					d'&eacute;viter de mentionner le nom du navire, en public comme en priv&eacute;.
 					&Agrave; cette &eacute;poque, la journ&eacute;e &eacute;tait ponctu&eacute;e
 					par le cri strident des sir&egrave;nes annon&ccedil;ant les raids a&eacute;riens,
-					et la presse ne disait mot de la pr&eacute;sence du QE dans le port. </p>
+					et la presse ne disait mot de la pr&eacute;sence du <acronym title="Queen Elizabeth">QE</acronym> dans le port. </p>
 				<p>&laquo;&nbsp;La police d'Esquimalt &eacute;tait partout et bloquait la
 					plupart des voies menant &agrave; la cale s&egrave;che, explique-t-il. Mais
 					un soir, ma m&egrave;re m'emmena aux abords du chantier pour me montrer
@@ -119,8 +119,8 @@
 					un rayon de lune. Nous sommes rest&eacute;s l&agrave; environ cinq minutes
 					avant qu'un policier militaire ne vienne nous avertir de nous en aller.&nbsp;&raquo; </p>
 				<p>Les mesures de s&eacute;curit&eacute; furent efficaces&nbsp;: apr&egrave;s
-					treize jours de travaux 24&nbsp;heures sur 24, le QE repartit transform&eacute; en
-					navire de transport militaire - et tout Victoria poussa un soupir de soulagement. </p>
+					treize jours de travaux 24&nbsp;heures sur&nbsp;24, le <acronym title="Queen Elizabeth">QE</acronym> repartit transform&eacute; en
+					navire de transport militaire &ndash; et tout Victoria poussa un soupir de soulagement. </p>
 				<div style="text-align: center;"><img src="../images/ssqe.jpg" alt="S.S. Queen Elizabeth, 1942" width="349" height="418" /></div>
 			</div>
 
