--- a/historique-history-fra.html
+++ b/historique-history-fra.html
@@ -6,7 +6,7 @@
 <!-- DEBUT DE L'EN-TETE | HEADER BEGINS -->
 <!-- DEBUT DU TITRE | TITLE BEGINS -->
 
-<title>Historique - CSE - TPSGC</title>
+<title>Historique &ndash; CSE &ndash; TPSGC</title>
 
 <!-- FIN DU TITRE | TITLE ENDS -->
 <!-- DEBUT DES METADONNEES | METADATA BEGINS -->
@@ -89,15 +89,15 @@
 					<!-- CONTENT TITLE ENDS | FIN DU TITRE DU CONTENU -->
 					</h1>
 				<p>Lorsque la Colombie-Britannique est devenue une province du Dominion du
-					Canada, en 1871, les conditions de l'Union stipulaient qu'une cale s&egrave;che
+					Canada, en&nbsp;1871, les conditions de l'Union stipulaient qu'une cale s&egrave;che
 					devait &ecirc;tre construite &agrave; Lang Cove. L'&eacute;conomie de la
 					colonie &eacute;tant tr&egrave;s li&eacute;e &agrave; l'industrie navale,
 					il fallait prendre les mesures pour promouvoir l'activit&eacute; commerciale
 					dans ce secteur. &Agrave; l'&eacute;poque, la cale s&egrave;che &eacute;tait
 					assez grande pour accueillir tous les navires de l'Empire britannique.</p>
-				<p><img src="images/reginolite.jpg" alt="14 septembre 1926 - Travaux de peinture du  Reginolite, le tout premier navire &agrave; utiliser les installations de la cale s&egrave;che" width="196" height="234" style="float:right; padding-left:10px; padding-bottom:10px;" />Le
+				<p><img src="images/reginolite.jpg" alt="14 septembre 1926 &ndash; Travaux de peinture du  Reginolite, le tout premier navire &agrave; utiliser les installations de la cale s&egrave;che" width="196" height="234" style="float:right; padding-left:10px; padding-bottom:10px;" />Le
 					minist&egrave;re f&eacute;d&eacute;ral des Travaux publics est charg&eacute; d'administrer
-					la cale s&egrave;che depuis 1987. Les navires devenant de plus en plus importants,
+					la cale s&egrave;che depuis&nbsp;1987. Les navires devenant de plus en plus importants,
 					il fut d&eacute;cid&eacute; de construire une grande cale de radoub au lieu
 					dit <i> Skinner's Cove</i>, &agrave; Esquimalt. Skinner's Cove fut choisie
 					parce qu'elle offrait une bonne protection contre le vent et qu'elle &eacute;tait
@@ -108,19 +108,19 @@
 					Le ministre de l'Environnement, l'Honorable David Anderson
 						et Son Honneur le maire d'Esquimalt, Ray Rice, en compagnie de Jack Gale,
 						de la Cale s&egrave;che d'Esquimalt, lors de la c&eacute;r&eacute;monie
-						comm&eacute;morative qui s'est tenue le 1<sup>er</sup>&nbsp;juillet&nbsp;2002. </div>
+						comm&eacute;morative qui s'est tenue le 1<sup>er</sup>&nbsp;juillet&nbsp;2002.</div>
 				<h2>Articles</h2>
 				<p>(par Leah Prentice)</p>
 				<ul>
-					<li><a href="his/article-fra.html">Article QE II</a>&nbsp;&nbsp;(Juin&nbsp;2002)</li>
+					<li><a href="his/article-fra.html">Article <acronym title="Queen Elizabeth">QE</acronym> II</a>&nbsp;&nbsp;(Juin&nbsp;2002)</li>
 				</ul>
 				<h2> Photos</h2>
 				<p>Choisir une ann&eacute;e&nbsp;:</p>
 				<ul>
-					<li><a href="his/1921-fra.html">Historique 1921&nbsp;- 1923</a></li>
-					<li><a href="his/1925-fra.html">Historique 1925</a></li>
-					<li><a href="his/1926-fra.html">Historique 1926</a></li>
-					<li><a href="his/1927-fra.html">Historique 1927</a></li>
+					<li><a href="his/1921-fra.html">Historique&nbsp;1921&nbsp;&ndash; 1923</a></li>
+					<li><a href="his/1925-fra.html">Historique&nbsp;1925</a></li>
+					<li><a href="his/1926-fra.html">Historique&nbsp;1926</a></li>
+					<li><a href="his/1927-fra.html">Historique&nbsp;1927</a></li>
 				</ul>
 			</div>
 
