--- a/index-fra.html
+++ b/index-fra.html
@@ -6,7 +6,7 @@
 <!-- DEBUT DE L'EN-TETE | HEADER BEGINS -->
 <!-- DEBUT DU TITRE | TITLE BEGINS -->
 
-<title>Bienvenue - Cale s&egrave;che d'Esquimalt (CSE - TPSGC)</title>
+<title>Bienvenue &ndash; Cale s&egrave;che d'Esquimalt (CSE) &ndash; TPSGC</title>
 
 <!-- FIN DU TITRE | TITLE ENDS -->
 <!-- DEBUT DES METADONNEES | METADATA BEGINS -->
@@ -15,7 +15,7 @@
 <link rel="schema.dc" href="http://purl.org/dc/terms/" />
 
 <meta name="dc.title" content="Bienvenue - Cale s&egrave;che d'Esquimalt (CSE - TPSGC)" />
-<meta name="dc.subject" scheme="gccore" content="Navire; Quai; Indexes" />
+<meta name="dc.subject" scheme="gccore" content="Navire; Quai; Index" />
 
 <meta name="dc.language" scheme="ISO639-2/T" content="fra" />
 <meta name="dc.creator" content="Gouvernement du Canada, Travaux publics et Services gouvernementaux Canada" />
@@ -93,22 +93,22 @@
 			<div class="center">
 				<h1 id="cont">
 					<!-- CONTENT TITLE BEGINS | DEBUT DU TITRE DU CONTENU -->
-					Cale s&egrave;che d'Esquimalt - Bienvenue
+					Cale s&egrave;che d'Esquimalt &ndash; Bienvenue
 					<!-- CONTENT TITLE ENDS | FIN DU TITRE DU CONTENU -->
 				</h1>
-				<div class="main1"><img src="images/dock-cale.jpg" title="Cale s&egrave;che d'Esquimalt vue est" alt="Cale s&egrave;che d'Esquimalt vue est" width="388" height="250" style="width: 388px; height: 250px;" />
+				<div class="main1"><img src="images/dock-cale.jpg" alt="Cale s&egrave;che d'Esquimalt vue est" width="388" height="250" style="width: 388px; height: 250px;" />
 					
 					<p>La Cale s&egrave;che d'Esquimalt (CSE) est la plus importante forme de radoub commerciale de la c&ocirc;te Ouest des Am&eacute;riques. Nous sommes <a href="emp-loc-fra.html">situ&eacute;s</a> dans un port ouvert &agrave; l'ann&eacute;e longue, sur l'&icirc;le de Vancouver, &agrave; proximit&eacute; des voies d'acc&egrave;s
 &agrave; l'Alaska et aux pays riverains du Pacifique. </p>
-					<p>Nos installations de calibre mondial sont &eacute;quip&eacute;es notamment de logements pour stabilisateurs et d'appareils de levage haute vitesse pour charges lourdes (capacit&eacute; de 150-165 tonnes). La cale s&egrave;che peut recevoir des navires de 100&nbsp;000 TPL, soit environ 90&nbsp;% des navires du monde.</p>
+					<p>Nos installations de calibre mondial sont &eacute;quip&eacute;es notamment de logements pour stabilisateurs et d'appareils de levage haute vitesse pour charges lourdes (capacit&eacute; de 150-165&nbsp;tonnes). La cale s&egrave;che peut recevoir des navires de 100&nbsp;000&nbsp;<acronym title="Tonnes de port en lourd">TPL</acronym>, soit environ 90&nbsp;% des navires du monde.</p>
 					<p>La <acronym title="Cale s&egrave;che d'Esquimalt">CSE</acronym> <a href="https://cse-egd.tpsgc-pwgsc.gc.ca/reserve-book-fra.cfm">offre des services de r&eacute;paration et d'entretien naval aux entreprises commerciales et aux particuliers</a>, sur commande (premier arriv&eacute;, premier servi). Tout le travail est assur&eacute; par des <a href="entreprises-firms-fra.html">entreprises de r&eacute;paration navale</a> du secteur priv&eacute;.</p>
 				</div>
 				<div class="option2">
 					<h2>Qui sommes-nous?</h2>
-					<p>La CSE est une division du minist&egrave;re f&eacute;d&eacute;ral des
+					<p>La <acronym title="Cale s&egrave;che d'Esquimalt">CSE</acronym> est une division du minist&egrave;re f&eacute;d&eacute;ral des
 						Travaux publics et des Services gouvernementaux du Canada (<acronym title='Travaux publics et Services gouvernementaux Canada'>TPSGC</acronym>).</p>
 					<p>Les services de r&eacute;paration de navires sont assur&eacute;s 24&nbsp;heures
-						sur 24, 7&nbsp;jours sur 7&nbsp;et 365&nbsp;jours par ann&eacute;e. Nous proposons toute
+						sur 24,&nbsp;7&nbsp;jours sur 7&nbsp;et 365&nbsp;jours par ann&eacute;e. Nous proposons toute
 						la gamme des <a href="ser/reparation-repair-fra.html">services de r&eacute;paration
 						navale</a>, avec tous les &eacute;quipements requis, notamment nos nouveaux logements
 						pour stabilisateurs facilitant les travaux d'entretien et de r&eacute;paration
@@ -116,17 +116,17 @@
 				</div>
 				<div class="option2">
 					<h2>Services offerts</h2>
-					<p>La CSE est tr&egrave;s appr&eacute;ci&eacute;e des propri&eacute;taires
+					<p>La <acronym title="Cale s&egrave;che d'Esquimalt">CSE</acronym> est tr&egrave;s appr&eacute;ci&eacute;e des propri&eacute;taires
 						de navires pour leurs travaux de r&eacute;paration et d'entretien&nbsp;:</p>
 					<ul>
 						<li>Paquebots de croisi&egrave;re;</li>
 						<li>Navires vraquiers et navires de transport de marchandises diverses
 							desservant l'Alaska et les pays riverains du Pacifique;</li>
-						<li> Navires canadiens - en particulier ceux du minist&egrave;re de la
+						<li> Navires canadiens &ndash; en particulier ceux du minist&egrave;re de la
 							D&eacute;fense nationale et de la British Columbia Ferry Corporation. </li>
 					</ul>
 					<p>Gr&acirc;ce &agrave; notre <a href="env/programme-program-fra.html">syst&egrave;me
-							de gestion environnementale homologu&eacute; <acronym title="Organisation internationale de normailisation">ISO</acronym> 14001</a>, nos travaux
+							de gestion environnementale homologu&eacute; <acronym title="Organisation internationale de normailisation">ISO</acronym>&nbsp;14001</a>, nos travaux
 							sont ex&eacute;cut&eacute;s
 							dans le respect de l'environnement. Nous sommes l'un
 							des trois chantiers de r&eacute;paration navale multi-usagers au monde &agrave; poss&eacute;der
