--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<!-- VERSION 1.0 DU GABARIT TPSGC | PWGSC TEMPLATE VERSION 1.0 -->
 	<!-- DEBUT DE L'EN-TETE | HEADER BEGINS -->
 	<!-- DEBUT DU TITRE FRANCAIS / ANGLAIS | FRENCH / ENGLISH TITLE BEGINS -->
-	<title>Bienvenue - Cale s&egrave;che d'Esquimalt - TPSGC | Welcome - Esquimalt Graving Dock - PWGSC</title> 
+	<title>Bienvenue &ndash; Cale s&egrave;che d'Esquimalt &ndash; TPSGC | Welcome &ndash; Esquimalt Graving Dock &ndash; PWGSC</title> 
 	<!-- FIN DU TITRE FRANCAIS / ANGLAIS | FRENCH / ENGLISH TITLE ENDS   -->
 
 	<!-- DEBUT DES METADONNEES BILINGUES | BILINGUAL METADATA BEGINS -->
