--- a/rendement-performance-eng.html
+++ b/rendement-performance-eng.html
@@ -6,7 +6,7 @@
 <!-- HEADER BEGINS | DEBUT DE L'EN-TETE -->
 <!-- TITLE BEGINS | DEBUT DU TITRE -->
 
-<title>Performance Standard - EGD - PWGSC</title>
+<title>Performance Standard &ndash; EGD &ndash; PWGSC</title>
 
 <!-- TITLE ENDS | FIN DU TITRE -->
 <!-- METADATA BEGINS | DEBUT DES METADONNEES -->
@@ -115,13 +115,13 @@
 						when requested.</li>
 					<li>Notifications of changes to service and/or capacity of the facility
 						will be provided within 48&nbsp;hours after first noting the change in condition
-						of the service or capacity at least 90% of the time.</li>
-					<li>The EGD Emergency Response Plan will be reviewed and updated, if required,
+						of the service or capacity at least 90%&nbsp;of the time.</li>
+					<li>The <acronym title="Esquimalt Graving Dock">EGD</acronym> Emergency Response Plan will be reviewed and updated, if required,
 						every 2&nbsp;years.</li>
-					<li>The EGD will continue to have a valid Statement of Compliance of Marine
+					<li>The <acronym title="Esquimalt Graving Dock">EGD</acronym> will continue to have a valid Statement of Compliance of Marine
 						Facility or a Port certificate and that all regulated security audits have
 						been completed.</li>
-					<li>Disputes related to service and/or capacity of the EGD would be handled
+					<li>Disputes related to service and/or capacity of the <acronym title="Esquimalt Graving Dock">EGD</acronym> would be handled
 						in the following manner:</li>
 				</ul>
 				<dl>
