--- a/rendement-performance-fra.html
+++ b/rendement-performance-fra.html
@@ -6,7 +6,7 @@
 <!-- DEBUT DE L'EN-TETE | HEADER BEGINS -->
 <!-- DEBUT DU TITRE | TITLE BEGINS -->
 
-<title>Norme de rendement - CSE - TPSGC</title>
+<title>Norme de rendement &ndash; CSE &ndash; TPSGC</title>
 
 <!-- FIN DU TITRE | TITLE ENDS -->
 <!-- DEBUT DES METADONNEES | METADATA BEGINS -->
@@ -112,16 +112,16 @@
 					<li>Les r&eacute;servations et les confirmations de r&eacute;servations
 						doivent &ecirc;tre effectu&eacute;es de fa&ccedil;on raisonnable sur demande.</li>
 					<li>Les pr&eacute;avis de changements de services et/ou de capacit&eacute; de
-						l'installation seront, au moins neuf fois du 10, &eacute;mis dans un d&eacute;lai
+						l'installation seront, au moins neuf fois du&nbsp;10, &eacute;mis dans un d&eacute;lai
 						de 48&nbsp;heures apr&egrave;s la premi&egrave;re observation d'un changement
 						de condition dans la nature du service ou de la capacit&eacute;.</li>
-					<li>Le plan d'intervention d'urgence de la CSE sera examin&eacute;, et mis &agrave; jour
+					<li>Le plan d'intervention d'urgence de la <acronym title="Cale s&egrave;che d'Esquimalt">CSE</acronym> sera examin&eacute;, et mis &agrave; jour
 						si n&eacute;cessaire, tous les deux ans.</li>
-					<li>La CSE aura toujours un &eacute;nonc&eacute; de conformit&eacute; d'installation
+					<li>La <acronym title="Cale s&egrave;che d'Esquimalt">CSE</acronym> aura toujours un &eacute;nonc&eacute; de conformit&eacute; d'installation
 						maritime valide ou un certificat d'installation portuaire valide et toutes
 						les v&eacute;rifications de s&eacute;curit&eacute; prescrites seront effectu&eacute;es.</li>
 					<li>Les diff&eacute;rends concernant les services et/ou les capacit&eacute;s
-						de la CSE seront g&eacute;r&eacute;s de la fa&ccedil;on suivante&nbsp;:</li>
+						de la <acronym title="Cale s&egrave;che d'Esquimalt">CSE</acronym> seront g&eacute;r&eacute;s de la fa&ccedil;on suivante&nbsp;:</li>
 				</ul>
 				<dl>
 
@@ -135,11 +135,11 @@
 
 
 					<dt>Troisi&egrave;me recours&nbsp;:</dt>
-					<dd>Sous ministre adjoint - Immobilier<br />
-						Sous ministre adjoint - <acronym title="Travaux publics et Services gouvernementaux Canada">TPSGC</acronym></dd>
+					<dd>Sous ministre adjoint &ndash; Immobilier<br />
+						Sous ministre adjoint &ndash; <acronym title="Travaux publics et Services gouvernementaux Canada">TPSGC</acronym></dd>
 
 				</dl>
-				<p><strong>Avis: Cet document sera mis &agrave; jour annuellement.</strong></p>
+				<p><strong>Avis&nbsp;: Cet document sera mis &agrave; jour annuellement.</strong></p>
 			</div>
 
 			<!-- FIN DU CONTENU | CONTENT ENDS -->
