--- a/ser/pompes-pumps-eng.html
+++ b/ser/pompes-pumps-eng.html
@@ -6,7 +6,7 @@
 <!-- HEADER BEGINS | DEBUT DE L'EN-TETE -->
 <!-- TITLE BEGINS | DEBUT DU TITRE -->
 
-<title>Pumphouse Staff - EGD - PWGSC</title>
+<title>Pumphouse Staff &ndash; EGD &ndash; PWGSC</title>
 
 <!-- TITLE ENDS | FIN DU TITRE -->
 <!-- METADATA BEGINS | DEBUT DES METADONNEES -->
@@ -118,9 +118,9 @@
 				<div style="text-align: center;"><img src="../images/pompe-pump.jpg" width="295" height="152" alt="Pumphouse" /></div>
 				<a name="inonder-fill" id="inonder-fill"></a>
 				<h2>Filling-up and Emptying The Drydock</h2>
-				<p> To drain the basin dock three 54&quot; twin parallel centrifugal pumps
+				<p> To drain the basin dock three&nbsp;54&quot; twin parallel centrifugal pumps
 					are used. These pumps are each rated at 66,000&nbsp;Imperial gallons per minute
-					(I.G.P.M). There is also two 20&quot; submerged auxiliary pumps which are
+					(I.G.P.M). There is also two&nbsp;20&quot; submerged auxiliary pumps which are
 					each rated at 9,000&nbsp;I.G.P.M. Two heavy-duty submersible pumps are used in
 					addition to a hydraulic gate system or penstock.</p>
 				<div class="topPage"> <a href="#tphp" title="Return to Top of Page"><img src="/clf20/images/tphp.gif" width="19" height="12" alt="" /><br />
@@ -135,9 +135,9 @@
 						Top of Page</a> </div>
 				<a name="elec" id="elec"></a>
 				<h2>Electrical</h2>
-				<p> Electrical services in the yard include 1500&nbsp;amp (Ampere) splitters, 480V (Volt), 400A (Ampere)
-					splitters and 120V (Volt) duplex plug services as well as telephone and cable television
-					services. Emergency service is provided by a 475VA (Volt-Ampere) diesel powered generator
+				<p> Electrical services in the yard include 1500&nbsp;amp (Ampere) splitters, 480V&nbsp;(Volt), 400A&nbsp;(Ampere)
+					splitters and 120V&nbsp;(Volt) duplex plug services as well as telephone and cable television
+					services. Emergency service is provided by a 475VA&nbsp;(Volt-Ampere) diesel powered generator
 					set.</p>
 				<div class="topPage"> <a href="#tphp" title="Return to Top of Page"><img src="/clf20/images/tphp.gif" width="19" height="12" alt="" /><br />
 						Top of Page</a> </div>
@@ -154,8 +154,8 @@
 					on this 19&nbsp;hectare site.</p>
 				<div style="text-align: center;"><img src="../images/personnel-staff.jpg" width="300" height="225" alt="Yard Staff building" /></div>
 
-				<p><i>Source: &nbsp;Harbour &amp; Shipping Journal, July 2002, Volume 85,
-						No. 7</i> </p>
+				<p><i>Source: &nbsp;Harbour &amp; Shipping Journal, July&nbsp;2002, Volume&nbsp;85,
+						No.&nbsp;7</i> </p>
 			</div>
 
 			<!-- CONTENT ENDS | FIN DU CONTENU -->
