--- a/ser/pompes-pumps-fra.html
+++ b/ser/pompes-pumps-fra.html
@@ -6,7 +6,7 @@
 <!-- DEBUT DE L'EN-TETE | HEADER BEGINS -->
 <!-- DEBUT DU TITRE | TITLE BEGINS -->
 
-<title>Le personnel du service des pompes - CSE - TPSGC</title>
+<title>Le personnel du service des pompes &ndash; CSE &ndash; TPSGC</title>
 
 <!-- FIN DU TITRE | TITLE ENDS -->
 <!-- DEBUT DES METADONNEES | METADATA BEGINS -->
@@ -104,7 +104,7 @@
 						d'acquisition de donn&eacute;es (M-Scada)</li>
 					<li>&Eacute;clairage sur pyl&ocirc;nes</li>
 					<li>Syst&egrave;me de graissage autonome des pompes principales</li>
-					<li>LProc&eacute;dures de verrouillage et de s&eacute;curit&eacute;</li>
+					<li>Les Proc&eacute;dures de verrouillage et de s&eacute;curit&eacute;</li>
 					<li><a href="#comp">Air comprim&eacute;</a></li>
 					<li><a href="#usees-sewage">Eaux us&eacute;es</a></li>
 					<li>Eau potable</li>
@@ -116,8 +116,8 @@
 				<h2>Inondation et ass&egrave;chement du bassin de mise en cale s&egrave;che</h2>
 				<p>Pour ass&eacute;cher le bassin, nous utilisons trois pompes centrifuges
 					parall&egrave;les &agrave; double turbine de 54&nbsp;<acronym title="pouces">po</acronym> ayant chacune un d&eacute;bit
-					nominal de 66&nbsp;000&nbsp;gallon impériaux par minute et deux pompes auxiliaires submerg&eacute;es de
-					20&nbsp;<acronym title="pouces">po</acronym> ayant chacune un d&eacute;bit nominal 9&nbsp;000&nbsp;gallon impériaux par minute. Nous utilisons
+					nominal de 66&nbsp;000&nbsp;gallon imp&eacute;riaux par minute et deux pompes auxiliaires submerg&eacute;es de
+					20&nbsp;<acronym title="pouces">po</acronym> ayant chacune un d&eacute;bit nominal 9&nbsp;000&nbsp;gallon imp&eacute;riaux par minute. Nous utilisons
 					aussi deux pompes submersibles de service intense avec un syst&egrave;me
 					d'&eacute;cluse hydraulique.</p>
 				<div class="topPage"> <a href="#tphp" title="Retourner au haut de la page"><img src="/clf20/images/tphp.gif" width="19" height="12" alt="" /><br />
@@ -137,7 +137,7 @@
 					de 1500&nbsp;Amp&egrave;res, des r&eacute;partiteurs 480&nbsp;Volts, 400&nbsp;Amp&egrave;res et des prises doubles de
 					120&nbsp;Volts ainsi que des raccords pour le t&eacute;l&eacute;phone et la t&eacute;l&eacute;vision.
 					L'alimentation de secours est assur&eacute;e par un groupe &eacute;lectrog&egrave;ne
-					diesel de 475&nbsp;VA (Volt-Ampere).</p>
+					diesel de 475&nbsp;VA&nbsp;(Volt-Ampere).</p>
 				<div class="topPage"> <a href="#tphp" title="Retourner au haut de la page"><img src="/clf20/images/tphp.gif" width="19" height="12" alt="" /><br />
 					Haut de la page</a> </div>
 				<a name="usees-sewage" id="usees-sewage"></a>
@@ -153,7 +153,7 @@
 					des tins, les manoeuvres d'entr&eacute;e/sortie des navires et l'entretien
 					des terrains (19&nbsp;hectares).</p>
 				<div style="text-align: center;"><img src="../images/personnel-staff.jpg" width="300" height="225" alt="B&acirc;timent du personnel du chantier" /></div>
-				<p><i>Source&nbsp;: Harbour &amp; Shipping Journal, Juillet 2002, Volume 85, n<sup>o</sup> 7</i> </p>
+				<p><i>Source&nbsp;: Harbour &amp; Shipping Journal, Juillet&nbsp;2002, Volume&nbsp;85, n<sup>o</sup>&nbsp;7</i> </p>
 			</div>
 
 			<!-- FIN DU CONTENU | CONTENT ENDS -->
