--- a/ser/reparation-repair-eng.html
+++ b/ser/reparation-repair-eng.html
@@ -6,7 +6,7 @@
 <!-- HEADER BEGINS | DEBUT DE L'EN-TETE -->
 <!-- TITLE BEGINS | DEBUT DU TITRE -->
 
-<title>Ship Repair Services - CSE - PWGSC</title>
+<title>Ship Repair Services &ndash; CSE &ndash; PWGSC</title>
 
 <!-- TITLE ENDS | FIN DU TITRE -->
 <!-- METADATA BEGINS | DEBUT DES METADONNEES -->
@@ -15,7 +15,7 @@
 <link rel="schema.dc" href="http://purl.org/dc/terms/" />
 
 <meta name="dc.title" content="Ships Repair Services - CSE - PWGSC" />
-<meta name="dc.subject" scheme="gccore" content="Ships; Wharfs; Maintenance; Equipment; " />
+<meta name="dc.subject" scheme="gccore" content="Ships; Wharfs; Maintenance; Equipment" />
 
 <meta name="dc.language" scheme="ISO639-2/T" content="eng" />
 <meta name="dc.creator" content="Government of Canada, Public Works and Government Services Canada" />
@@ -94,19 +94,19 @@
 					<!-- CONTENT TITLE ENDS | FIN DU TITRE DU CONTENU -->
 					</h1>
 				<img src="../images/grue-crane.jpg" width="193" height="280" alt="Crane" style="float: right; padding: 10px;" />
-				<p> The Dock (which has a capacity of up to 100,000DWT), is serviced by three
+				<p> The Dock (which has a capacity of up to 100,000&nbsp;<acronym title="Deadweight Tonnage">DWT</acronym>), is serviced by three
 					heavy-lift electrically-driven, rail-mounted travelling cranes:</p>
 				<ul>
-					<li> Krupp Level Luffing Crane - 150-tonne capacity at 35&nbsp;metres and a 100-tonne
+					<li> Krupp Level Luffing Crane &ndash; 150-tonne capacity at 35&nbsp;metres and a 100-tonne
 						capacity at 50&nbsp;metres. This crane has a main hook capable of lifting entire
 						vessels onto land for refit or repair and an auxiliary hook with a 15&nbsp;tonne
 						capacity generally used to transport materials onto the vessel. </li>
-					<li> Colby Hammerhead Crane - 45-tonne capacity at 30&nbsp;metres. This crane
+					<li> Colby Hammerhead Crane &ndash; 45-tonne capacity at 30&nbsp;metres. This crane
 						has a main hook capable of 39-tonnes and a 9-tonne capacity auxiliary. </li>
-					<li> Ebco Level Luffing Crane - This quick maneuvering crane travels the
+					<li> Ebco Level Luffing Crane &ndash; This quick maneuvering crane travels the
 						full length of the Dock and has a 30-tonne capacity at 35&nbsp;metres. </li>
 				</ul>
-				<p>In addition, the Esquimalt Graving Dock has two mobile cranes - the 20-tonne
+				<p>In addition, the Esquimalt Graving Dock has two mobile cranes &ndash; the 20-tonne
 					Grove and a 12-tonne Hyster with boom lowering characteristics.</p>
 				<p>Crane services include a Hyster forklift truck and mobile crane. Kee blocks,
 					wedges, fillers and timbers are also available.</p>
@@ -118,12 +118,11 @@
 					and vertical surfaces like ship hulls, decks and holding/storage tanks.
 					This is how it works:</p>
 				<p>Abrasive cleaning material is &quot;thrown&quot; against the surface to
-					be cleaned using centrifugal force from a wheel revolving at high speed
-					-- effectively blast cleaning the area. The energy used to do this is sufficient
+					be cleaned using centrifugal force from a wheel revolving at high speed &ndash; effectively blast cleaning the area. The energy used to do this is sufficient
 					enough that the abrasive material rebounds from the work surface into a
 					reclaim duct for reuse.</p>
-				<p><i>Source: &nbsp;Harbour &amp; Shipping Journal, July 2002, Volume 85,
-						No. 7</i> </p>
+				<p><i>Source: &nbsp;Harbour &amp; Shipping Journal, July&nbsp;2002, Volume&nbsp;85,
+						No.&nbsp;7</i></p>
 				<p><a href="pompes-pumps-eng.html">Plant &amp; Maintenance Services</a></p>
 			</div>
 
