--- a/services-fra.html
+++ b/services-fra.html
@@ -6,7 +6,7 @@
 <!-- DEBUT DE L'EN-TETE | HEADER BEGINS -->
 <!-- DEBUT DU TITRE | TITLE BEGINS -->
 
-<title>Services - CSE - TPSGC</title>
+<title>Services &ndash; CSE &ndash; TPSGC</title>
 
 <!-- FIN DU TITRE | TITLE ENDS -->
 <!-- DEBUT DES METADONNEES | METADATA BEGINS -->
@@ -90,19 +90,19 @@
 					</h1>
 				<p>La Cale s&egrave;che d'Esquimalt est une entreprise dynamique de r&eacute;paration
 					navale desservant une client&egrave;le nationale et internationale et fonctionnant
-					24&nbsp;heures sur 24, 7&nbsp;jours sur 7&nbsp;et 365&nbsp;jours par ann&eacute;e.</p>
+					24&nbsp;heures sur 24,&nbsp;7&nbsp;jours sur 7&nbsp;et 365&nbsp;jours par ann&eacute;e.</p>
 
          <h2>Pumphouse</h2>
 
           <p>
-          The pumphouse staff is responsible for the fill and drain of the dock basin, electrical supply, compressed air, sewage and fresh water. For further information contact the pumphouse supervisor at 250-363-3768&nbsp;or the pumphouse floor at 250-363-3788.
+          The pumphouse staff is responsible for the fill and drain of the dock basin, electrical supply, compressed air, sewage and fresh water. For further information contact the pumphouse supervisor at&nbsp;250-363-3768&nbsp;or the pumphouse floor at&nbsp;250-363-3788.
           </p>
           <img src="images/pompe-pump.jpg" width="295" height="152" alt="Pumphouse" />
 
           <h2>Electrical</h2>
 
           <p>
-          For up to date electrical services please contact the electrical supervisor at 250-363-3991.
+          For up to date electrical services please contact the electrical supervisor at&nbsp;250-363-3991.
           </p>
 
           <h2>Yard</h2>
@@ -118,20 +118,20 @@
           Our clients are serviced by three heavy-lift electrically-driven, rail-mounted travelling cranes as well as a 7&nbsp;tonne Tower Crane on the South Jetty, and 3&nbsp;mobile cranes.
           </p>
 
-          <p>Cranes at EGD:</p>
+          <p>Cranes at EGD&nbsp;:</p>
 
           <img src="images/grue-crane.jpg" width="193" height="280" alt="Crane" style="float: right; padding-left: 10px;" />
 
           <p>
-          <strong>Krupp 150&nbsp;tonne Level Luffing Crane (1982)</strong> - 150-tonne capacity at 35&nbsp;metres and a 100-tonne capacity at 50&nbsp;metres. This crane has a main hook capable of lifting entire vessels onto land for refit or repair and an auxiliary hook with a 15&nbsp;tonne capacity generally used to transport materials onto the vessel. This crane is situated on the North side of the Dock and is a valuable crane to serve our Clients needs for vessels berthed at the North Landing Wharf.
+          <strong>Krupp 150&nbsp;tonne Level Luffing Crane (1982)</strong> &ndash; 150-tonne capacity at 35&nbsp;metres and a 100-tonne capacity at 50&nbsp;metres. This crane has a main hook capable of lifting entire vessels onto land for refit or repair and an auxiliary hook with a 15&nbsp;tonne capacity generally used to transport materials onto the vessel. This crane is situated on the North side of the Dock and is a valuable crane to serve our Clients needs for vessels berthed at the North Landing Wharf.
           </p>
 
           <p>
-          <strong>Ebco 30&nbsp;tonne Level Luffing Crane (1984)</strong> - This quick maneuvering crane travels the full length of the Dock and has a 30-tonne capacity at 35&nbsp;metres.
+          <strong>Ebco 30&nbsp;tonne Level Luffing Crane (1984)</strong> &ndash; This quick maneuvering crane travels the full length of the Dock and has a 30-tonne capacity at 35&nbsp;metres.
           </p>
 
           <p>
-          <strong>Konecrane 30&nbsp;tonne, Level Luffing Crane (2010)</strong> - The newest of our rail mounted cranes has a reach of 42&nbsp;metres. This crane travels the full length of the south side of the graving dock.
+          <strong>Konecrane 30&nbsp;tonne, Level Luffing Crane (2010)</strong> &ndash; The newest of our rail mounted cranes has a reach of 42&nbsp;metres. This crane travels the full length of the south side of the graving dock.
           </p>
 
           <p>
@@ -139,7 +139,7 @@
           </p>
 
           <p>
-          In addition, the Esquimalt Graving Dock has three mobile cranes: A <strong>30-tonne Grove RT rubber tired crane</strong>, a <strong>25-tonne rubber tired mobile crane</strong> and a <strong>10-tonne Hyster Bullmoose</strong> that is ideal for dockbottom applications. 
+          In addition, the Esquimalt Graving Dock has three mobile cranes&nbsp;: A <strong>30-tonne Grove RT rubber tired crane</strong>, a <strong>25-tonne rubber tired mobile crane</strong> and a <strong>10-tonne Hyster Bullmoose</strong> that is ideal for dockbottom applications. 
           </p>
 
           <p>
