--- a/site-eng.html
+++ b/site-eng.html
@@ -6,7 +6,7 @@
 <!-- HEADER BEGINS | DEBUT DE L'EN-TETE -->
 <!-- TITLE BEGINS | DEBUT DU TITRE -->
 
-<title>Site Map - EGD - PWGSC</title>
+<title>Site Map &ndash; EGD &ndash; PWGSC</title>
 
 <!-- TITLE ENDS | FIN DU TITRE -->
 <!-- METADATA BEGINS | DEBUT DES METADONNEES -->
@@ -117,11 +117,11 @@
 					<li><a href="historique-history-eng.html">History</a>
 
 						<ul>
-							<li> <a href="his/1921-eng.html">History 1921&nbsp;- 1923</a></li>
-							<li> <a href="his/1925-eng.html">History 1925</a></li>
-							<li> <a href="his/1926-eng.html">History 1926</a></li>
-							<li> <a href="his/1927-eng.html">History 1927</a></li>
-							<li> <a href="his/article-eng.html">QE II Article</a></li>
+							<li> <a href="his/1921-eng.html">History&nbsp;1921 &ndash; 1923</a></li>
+							<li> <a href="his/1925-eng.html">History&nbsp;1925</a></li>
+							<li> <a href="his/1926-eng.html">History&nbsp;1926</a></li>
+							<li> <a href="his/1927-eng.html">History&nbsp;1927</a></li>
+							<li> <a href="his/article-eng.html"><acronym title="Queen Elizabeth">QE</acronym> II Article</a></li>
 						</ul>
 					</li>
 
