--- a/site-fra.html
+++ b/site-fra.html
@@ -6,7 +6,7 @@
 <!-- DEBUT DE L'EN-TETE | HEADER BEGINS -->
 <!-- DEBUT DU TITRE | TITLE BEGINS -->
 
-<title>Plan du site - CSE - TPSGC</title>
+<title>Plan du site &ndash; CSE &ndash; TPSGC</title>
 
 <!-- FIN DU TITRE | TITLE ENDS -->
 <!-- DEBUT DES METADONNEES | METADATA BEGINS -->
@@ -15,7 +15,7 @@
 <link rel="schema.dc" href="http://purl.org/dc/terms/" />
 
 <meta name="dc.title" content="Plan du site - CSE - TPSGC" />
-<meta name="dc.subject" scheme="gccore" content="Navire; Quai; Navigation; Information; Indexes" />
+<meta name="dc.subject" scheme="gccore" content="Navire; Quai; Navigation; Information; Index" />
 
 <meta name="dc.language" scheme="ISO639-2/T" content="fra" />
 <meta name="dc.creator" content="Gouvernement du Canada, Travaux publics et Services gouvernementaux Canada" />
@@ -117,11 +117,11 @@
 					<li><a href="historique-history-fra.html">Historique</a>
 
 						<ul>
-							<li> <a href="his/1921-fra.html">Historique 1921&nbsp;- 1923</a></li>
-							<li> <a href="his/1925-fra.html">Historique 1925</a></li>
-							<li> <a href="his/1926-fra.html">Historique 1926</a></li>
-							<li> <a href="his/1927-fra.html">Historique 1927</a></li>
-							<li> <a href="his/article-fra.html">Article QE II</a></li>
+							<li> <a href="his/1921-fra.html">Historique&nbsp;1921&nbsp;&ndash; 1923</a></li>
+							<li> <a href="his/1925-fra.html">Historique&nbsp;1925</a></li>
+							<li> <a href="his/1926-fra.html">Historique&nbsp;1926</a></li>
+							<li> <a href="his/1927-fra.html">Historique&nbsp;1927</a></li>
+							<li> <a href="his/article-fra.html">Article <acronym title="Queen Elizabeth">QE</acronym> II</a></li>
 						</ul>
 					</li>
 
