--- a/ssi/right-menu-droite-fra.html
+++ b/ssi/right-menu-droite-fra.html
@@ -3,13 +3,14 @@
 	<li>
 		<h2>Saviez-vous?</h2>
 		<ul>
-			<li>La <acronym title="Cale s&egrave;che d'Esquimalt">CSE</acronym> est une des rares installations de r&eacute;paration de grands b&acirc;timents au monde &agrave; avoir adopt&eacute; la norme <acronym title="Organisation internationale de normailisation">ISO</acronym> 14001.  <a title="CSE: Tracer la voie &agrave; la norme ISO 14001" href="/pac/cse-egd/env/voie-way-fra.html">D&eacute;tails &gt; </a></li>
+			<li>La <acronym title="Cale s&egrave;che d'Esquimalt">CSE</acronym> est une des rares installations de r&eacute;paration de grands b&acirc;timents au monde &agrave; avoir adopt&eacute; la norme <acronym title="Organisation internationale de normailisation">ISO</acronym>&nbsp;14001.  <a title="CSE: Tracer la voie &agrave; la norme ISO 14001" href="/pac/cse-egd/env/voie-way-fra.html">D&eacute;tails &gt; </a></li>
 		</ul>
-		<br />
+	</li>
+	<li>
 		<h2>Quoi de neuf...</h2>
 		<ul>
-			<li><a title="CSE: Capital Projects" href="http://www.tpsgc-pwgsc.gc.ca/pac/cse-egd/env/projects-projets-fra.html">Futurs projets d'investissement impact sur les op&eacute;rations de la cale s&egrave;che d'Esquimalt.  </a></li>
-			<li><a title="CSE Reglement" href="http://gazette.gc.ca/rp-pr/p2/2009/2009-12-23/html/sor-dors324-fra.html">R&egrave;glement modifiant le R&egrave;glement de 1989&nbsp;sur la cale s&egrave;che d&iquest;Esquimalt.</a></li>
+			<li><a title="CSE: Futurs projets" href="http://www.tpsgc-pwgsc.gc.ca/pac/cse-egd/env/projects-projets-fra.html">Futurs projets d'investissement impact sur les op&eacute;rations de la cale s&egrave;che d'Esquimalt.  </a></li>
+			<li><a title="CSE Reglement" href="http://gazette.gc.ca/rp-pr/p2/2009/2009-12-23/html/sor-dors324-fra.html">R&egrave;glement modifiant le R&egrave;glement de&nbsp;1989 sur la cale s&egrave;che d&iquest;Esquimalt.</a></li>
 		</ul>
 	</li>
 </ul>
