--- a/his/1926-fra.html
+++ b/his/1926-fra.html
@@ -6,7 +6,7 @@
 <!-- DEBUT DE L'EN-TETE | HEADER BEGINS -->
 <!-- DEBUT DU TITRE | TITLE BEGINS -->
 
-<title>1926 - CSE - TPSGC</title>
+<title>1926 &ndash; CSE &ndash; TPSGC</title>
 
 <!-- FIN DU TITRE | TITLE ENDS -->
 <!-- DEBUT DES METADONNEES | METADATA BEGINS -->
@@ -69,7 +69,7 @@
 		<!-- DEBUT DE LA PISTE DE NAVIGATION | BREAD CRUMB BEGINS -->
 		<p class="breadcrumb">
 			<!--#include virtual="/clf20/ssi/bread-pain-fra.html"--><!--#include virtual="/pac/cse-egd/ssi/bread-pain-fra.html"-->
-			&gt;&nbsp;<a href="../historique-history-fra.html">Historique</a> &gt; 1926</p>
+			&gt;&nbsp;<a href="../historique-history-fra.html">Historique</a> &gt;&nbsp;1926</p>
 		<!-- BREAD CRUMBS END | FIN DE LA PISTE DE NAVIGATION -->
 		<div class="colLayout">
 			<!-- DEBUT DE LA MISE EN PAGE DE DEUX COLONNES | TWO COLUMN LAYOUT BEGINS -->
@@ -90,14 +90,14 @@
 					</h1>
 				<div class="option4">
 					<h2>1926</h2>
-					<img src="../images/historique_history/1926_1.jpg" alt="Caisson - Section 1" width="300" height="245" style="padding-bottom:10px;" /><br />
+					<img src="../images/historique_history/1926_1.jpg" alt="Caisson &ndash; Section&nbsp;1" width="300" height="245" style="padding-bottom:10px;" /><br />
 					<img src="../images/historique_history/1926_2.jpg" alt="Le &laquo;&nbsp;S.S. Reginolite&nbsp;&raquo; en cale s&egrave;che" width="300" height="245" /> </div>
 				<p>Choisir une ann&eacute;e&nbsp;:</p>
 				<ul>
-					<li><a href="1921-fra.html">Historique 1921&nbsp;- 1923</a></li>
-					<li><a href="1925-fra.html">Historique 1925</a></li>
-					<li><a href="1926-fra.html">Historique 1926</a></li>
-					<li><a href="1927-fra.html">Historique 1927</a></li>
+					<li><a href="1921-fra.html">Historique&nbsp;1921&nbsp;&ndash; 1923</a></li>
+					<li><a href="1925-fra.html">Historique&nbsp;1925</a></li>
+					<li><a href="1926-fra.html">Historique&nbsp;1926</a></li>
+					<li><a href="1927-fra.html">Historique&nbsp;1927</a></li>
 				</ul>
 			</div>
 
