--- a/historique-history-eng.html
+++ b/historique-history-eng.html
@@ -6,7 +6,7 @@
 <!-- HEADER BEGINS | DEBUT DE L'EN-TETE -->
 <!-- TITLE BEGINS | DEBUT DU TITRE -->
 
-<title>History - EGD - PWGSC</title>
+<title>History &ndash; EGD &ndash; PWGSC</title>
 
 <!-- TITLE ENDS | FIN DU TITRE -->
 <!-- METADATA BEGINS | DEBUT DES METADONNEES -->
@@ -93,33 +93,33 @@
 					<!-- CONTENT TITLE ENDS | FIN DU TITRE DU CONTENU -->
 					</h1>
 				<p>When British Columbia became a province within the Dominion of Canada
-					in 1871, the Terms of the Union specified a graving dock be built at Lang
+					in&nbsp;1871, the Terms of the Union specified a graving dock be built at Lang
 					Cove. The Colony's economy heavily relied on the commercial shipbuilding
 					industry and it had to ensure it could attract business. At the time, the
 					Drydock was large enough to accommodate every ship in the British Empire.</p>
-				<p><img src="images/reginolite.jpg" alt="September 14, 1926 - Painting progress of Reginolite, first vessel in drydock" width="196" height="234" style="float:right; padding-left:10px; padding-bottom:10px;" />The
+				<p><img src="images/reginolite.jpg" alt="September 14, 1926 &ndash; Painting progress of Reginolite, first vessel in drydock" width="196" height="234" style="float:right; padding-left:10px; padding-bottom:10px;" />The
 					federal department of Public Works assumed custodianship of the graving
-					dock in 1887. As vessels grew in size, it was decided to build a larger
+					dock in&nbsp;1887. As vessels grew in size, it was decided to build a larger
 					drydock at Skinner's Cove in Esquimalt. Skinner's Cove was chosen because
-					it was sheltered from wind and was situated on a solid rock basin - ideal
+					it was sheltered from wind and was situated on a solid rock basin &ndash; ideal
 					for a drydock. The dock took six years to build and was the second largest
 					in the world. </p>
 				<div class="smallFont" style="text-align: center; font-weight:bold;"><img src="images/ceremon.jpg" alt="Time Capsule dedicated" width="425" height="319" />
 					<br />The Honourable David Anderson, former Minister of Environment with His
 						Worship, Mayor Ray Rice of Esquimalt and Jack Gale of the Esquimalt Graving
-						Dock at the rededication ceremony, July 1, 2002.</div>
+						Dock at the rededication ceremony, July&nbsp;1,&nbsp;2002.</div>
 				<h2>Articles</h2>
 				<p>by Leah Prentice</p>
 				<ul>
-					<li><a href="his/article-eng.html">QE II Article</a>&nbsp;&nbsp;(June 2002)</li>
+					<li><a href="his/article-eng.html"><acronym title="Queen Elizabeth">QE</acronym> II Article</a>&nbsp;&nbsp;(June&nbsp;2002)</li>
 				</ul>
 				<h2>Photographs</h2>
 				<p>Select a year:</p>
 				<ul>
-					<li><a href="his/1921-eng.html">History 1921&nbsp;- 1923</a></li>
-					<li><a href="his/1925-eng.html">History 1925</a></li>
-					<li><a href="his/1926-eng.html">History 1926</a></li>
-					<li><a href="his/1927-eng.html">History 1927</a></li>
+					<li><a href="his/1921-eng.html">History&nbsp;1921 &ndash; 1923</a></li>
+					<li><a href="his/1925-eng.html">History&nbsp;1925</a></li>
+					<li><a href="his/1926-eng.html">History&nbsp;1926</a></li>
+					<li><a href="his/1927-eng.html">History&nbsp;1927</a></li>
 				</ul>
 			</div>
 
