--- a/index-eng.html
+++ b/index-eng.html
@@ -6,7 +6,7 @@
 <!-- HEADER BEGINS | DEBUT DE L'EN-TETE -->
 <!-- TITLE BEGINS | DEBUT DU TITRE -->
 
-<title>Welcome - Esquimalt Graving Dock (EGD - PWGSC)</title>
+<title>Welcome &ndash; Esquimalt Graving Dock (EGD) &ndash; PWGSC</title>
 
 <!-- TITLE ENDS | FIN DU TITRE -->
 <!-- METADATA BEGINS | DEBUT DES METADONNEES -->
@@ -92,20 +92,19 @@
 	<div class="center">
 		<h1 id="cont">
 			<!-- CONTENT TITLE BEGINS | DEBUT DU TITRE DU CONTENU -->
-			Esquimalt Graving Dock - Welcome
+			Esquimalt Graving Dock &ndash; Welcome
 			<!-- CONTENT TITLE ENDS | FIN DU TITRE DU CONTENU -->
 		</h1>
       
-		<div class="main1"><img src="images/dock-cale.jpg" title="Esquimalt Graving Dock facing East" alt="Esquimalt Graving Dock facing East" width="388" height="250" style="width: 388px; height: 250px;" />
+		<div class="main1"><img src="images/dock-cale.jpg" alt="Esquimalt Graving Dock facing East" width="388" height="250" style="width: 388px; height: 250px;" />
 					
 			<p>The Esquimalt Graving Dock, or EGD, is proud to be federally owned, operated, and maintained. <acronym title="Esquimalt Graving Dock">EGD</acronym> is the largest solid-bottom commercial drydock on the West Coast of the Americas. We are <a href="emp-loc-eng.html">located</a> in an ice free harbour on Vancouver Island near gateways to Alaska and the Pacific Rim. </p>
-			<p>Our world class facilities include stabilizer pockets and high-speed heavy lift cranes up to 150&nbsp;tonnes/165&nbsp;tons. The Dock can accommodate vessels up to 100,000 DWT or about 90% of the world's ships.</p>
-			<p>The EGD is <a href="https://cse-egd.tpsgc-pwgsc.gc.ca/reserve-book-eng.cfm">available to any company or individual</a> on a first-come first-serve basis. All work is carried out by private sector <a href="entreprises-firms-eng.html">ship repair firms</a>. </p>
+			<p>Our world class facilities include stabilizer pockets and high-speed heavy lift cranes up to 150&nbsp;tonnes/165&nbsp;tons. The Dock can accommodate vessels up to 100,000&nbsp;<acronym title="Deadweight Tonnage">DWT</acronym> or about 90%&nbsp;of the world's ships.</p>
+			<p>The <acronym title="Esquimalt Graving Dock">EGD</acronym> is <a href="https://cse-egd.tpsgc-pwgsc.gc.ca/reserve-book-eng.cfm">available to any company or individual</a> on a first-come first-serve basis. All work is carried out by private sector <a href="entreprises-firms-eng.html">ship repair firms</a>. </p>
 		</div>
 		<div class="option2">
 			<h2>Who We Are</h2>
-			<p>The EGD is a branch of Public Works and Government Services Canada (<acronym title='Public Works and Government Services Canada'>PWGSC</acronym>)
-				- a Canadian federal government department.</p>
+			<p>The <acronym title="Esquimalt Graving Dock">EGD</acronym> is a branch of Public Works and Government Services Canada (<acronym title='Public Works and Government Services Canada'>PWGSC</acronym>) &ndash; a Canadian federal government department.</p>
 			<p>Ship repair work takes place 24-hours-a-day, seven days a week, 365&nbsp;days
 				a year. The Dock provides a full range of <a href="ser/reparation-repair-eng.html">ship
 				repair services</a> and amenities like our new stabilizer
@@ -119,10 +118,10 @@
 				<li>West Coast cruise ships;</li>
 				<li>Bulk and general cargo vessels travelling to Alaska and the Pacific
 					Rim; and,</li>
-				<li>Canadian vessels - especially the Department of National Defense and
+				<li>Canadian vessels &ndash; especially the Department of National Defense and
 					the British Columbia Ferry Corporation.</li>
 			</ul>
-			<p>Our ISO 14001 environmental management system ensures that work done at the Esquimalt Graving Dock is done in an environmentally responsible manner.<br />
+			<p>Our <acronym title="International Standards Organization">ISO</acronym>&nbsp;14001 environmental management system ensures that work done at the Esquimalt Graving Dock is done in an environmentally responsible manner.<br />
           </p>
         </div>
       </div>
