--- a/services-eng.html
+++ b/services-eng.html
@@ -6,7 +6,7 @@
 <!-- HEADER BEGINS | DEBUT DE L'EN-TETE -->
 <!-- TITLE BEGINS | DEBUT DU TITRE -->
 
-<title>Services - EGD - PWGSC</title>
+<title>Services &ndash; EGD &ndash; PWGSC</title>
 
 <!-- TITLE ENDS | FIN DU TITRE -->
 <!-- METADATA BEGINS | DEBUT DES METADONNEES -->
@@ -100,14 +100,14 @@
           <h2>Pumphouse</h2>
 
           <p>
-          The pumphouse staff is responsible for the fill and drain of the dock basin, electrical supply, compressed air, sewage and fresh water. For further information contact the pumphouse supervisor at 250-363-3768&nbsp;or the pumphouse floor at 250-363-3788.
+          The pumphouse staff is responsible for the fill and drain of the dock basin, electrical supply, compressed air, sewage and fresh water. For further information contact the pumphouse supervisor at&nbsp;250-363-3768;or the pumphouse floor at&nbsp;250-363-3788.
           </p>
           <img src="images/pompe-pump.jpg" width="295" height="152" alt="Pumphouse" />
 
           <h2>Electrical</h2>
 
           <p>
-          For up to date electrical services please contact the electrical supervisor at 250-363-3991.
+          For up to date electrical services please contact the electrical supervisor at&nbsp;250-363-3991.
           </p>
 
           <h2>Yard</h2>
@@ -123,24 +123,24 @@
           Our clients are serviced by three heavy-lift electrically-driven, rail-mounted travelling cranes as well as a 7&nbsp;tonne Tower Crane on the South Jetty, and 3&nbsp;mobile cranes.
           </p>
 
-          <p>Cranes at EGD:</p>
+          <p>Cranes at <acronym title="Esquimalt Graving Dock">EGD</acronym>:</p>
 
           <img src="images/grue-crane.jpg" width="193" height="280" alt="Crane" style="float: right; padding-left: 10px;" />
 
           <p>
-          <strong>Krupp 150&nbsp;tonne Level Luffing Crane (1982)</strong> - 150-tonne capacity at 35&nbsp;metres and a 100-tonne capacity at 50&nbsp;metres. This crane has a main hook capable of lifting entire vessels onto land for refit or repair and an auxiliary hook with a 15&nbsp;tonne capacity generally used to transport materials onto the vessel. This crane is situated on the North side of the Dock and is a valuable crane to serve our Clients needs for vessels berthed at the North Landing Wharf.
+          <strong>Krupp 150&nbsp;tonne Level Luffing Crane (1982)</strong> &ndash; 150-tonne capacity at 35&nbsp;metres and a 100-tonne capacity at 50&nbsp;metres. This crane has a main hook capable of lifting entire vessels onto land for refit or repair and an auxiliary hook with a 15&nbsp;tonne capacity generally used to transport materials onto the vessel. This crane is situated on the North side of the Dock and is a valuable crane to serve our Clients needs for vessels berthed at the North Landing Wharf.
           </p>
 
           <p>
-          <strong>Ebco 30&nbsp;tonne Level Luffing Crane (1984)</strong> - This quick maneuvering crane travels the full length of the Dock and has a 30-tonne capacity at 35&nbsp;metres.
+          <strong>Ebco 30&nbsp;tonne Level Luffing Crane (1984)</strong> &ndash; This quick maneuvering crane travels the full length of the Dock and has a 30-tonne capacity at 35&nbsp;metres.
           </p>
 
           <p>
-          <strong>Konecrane 30&nbsp;tonne, Level Luffing Crane (2010)</strong> - The newest of our rail mounted cranes has a reach of 42&nbsp;metres. This crane travels the full length of the south side of the graving dock.
+          <strong>Konecrane 30&nbsp;tonne, Level Luffing Crane (2010)</strong> &ndash; The newest of our rail mounted cranes has a reach of 42&nbsp;metres. This crane travels the full length of the south side of the graving dock.
           </p>
 
           <p>
-          <strong>Pecco 7&nbsp;tonne Tower Crane</strong> is situated on the South Jetty of EGD and can service vessels berthed at the South Jetty.
+          <strong>Pecco 7&nbsp;tonne Tower Crane</strong> is situated on the South Jetty of <acronym title="Esquimalt Graving Dock">EGD</acronym> and can service vessels berthed at the South Jetty.
           </p>
 
           <p>
@@ -154,7 +154,7 @@
           <h2>Risk Management</h2>
 
           <p>
-          The Risk Management Group addresses issues concerning safety, fire, security and public relations. They also ensure that EGD maintains its Marine Facility Certification under the requirements of the Marine Transportation Security Regulations and International Ship &amp; Port Facility Security Code. This group works and coordinates mostly behind the scenes to help ensure that not only do EGD employees work in a safe and secure environment, but also employees of the companies that operate out of the EGD facility.  
+          The Risk Management Group addresses issues concerning safety, fire, security and public relations. They also ensure that <acronym title="Esquimalt Graving Dock">EGD</acronym> maintains its Marine Facility Certification under the requirements of the Marine Transportation Security Regulations and International Ship &amp; Port Facility Security Code. This group works and coordinates mostly behind the scenes to help ensure that not only do <acronym title="Esquimalt Graving Dock">EGD</acronym> employees work in a safe and secure environment, but also employees of the companies that operate out of the <acronym title="Esquimalt Graving Dock">EGD</acronym> facility.  
           </p>
 
 			</div>
