--- a/ssi/right-menu-droite-eng.html
+++ b/ssi/right-menu-droite-eng.html
@@ -5,7 +5,7 @@
 		<ul>
 			<li>
         <acronym title="Esquimalt Graving Dock">EGD</acronym> is one of the few large ship repair facilities in the world who has implemented
-				<acronym title="International Organization for Standardization">ISO</acronym> 14001.  <a title="EGD: Leading the Way with ISO 14001" href="/pac/cse-egd/env/voie-way-eng.html">More &gt; </a>
+				<acronym title="International Organization for Standardization">ISO</acronym>&nbsp;14001.  <a title="EGD: Leading the Way with ISO 14001" href="/pac/cse-egd/env/voie-way-eng.html">More &gt; </a>
       </li>
 		</ul>
   </li>
